Výměna name za id

--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -2,51 +2,51 @@
 
 <p>K ozdobení dortů a cukrovinek.</p>
 
-<a name="bily-led"><h2>Bílý led</h2></a>
+<a id="bily-led"><h2>Bílý led</h2></a>
 
 <p>Utluč čtvrt libry pěkného cukru na mouku a prosej ho (tak se to musi stát ua každý led), pak ho dej na šáleček, přidej k němu z jednoho bílku sněhu, a hodně to tři, potom do toho naceď z půl citronu šťávu, tak led pěkně zbělí; musí se ale nejméně půl hodiny míchat.</p>
 
-<a name="zluty-led"><h2>Žlutý led</h2></a>
+<a id="zluty-led"><h2>Žlutý led</h2></a>
 
 <p>Dělá se zcela tak jako předešlý, jenom že se musí celá čtvrt libra cukru na citronu ostrouhat a několik kapek v čistém klůcku rozmočeného šafránu přidat, aby to bylo žluté.</p>
 
-<a name="cerny-led"><h2>Černý led</h2></a>
+<a id="cerny-led"><h2>Černý led</h2></a>
 
 <p>Musí se dát do cukru bílkového sněhu o něco víc než předešle, protože se nedá žádná citronová šťáva, a když jest již hezky utřen, dá se do toho ustrouhaná tabulka čokolády a ještě se to čtvrt hodiny tře.</p>
 
-<a name="skoricovy-led"><h2>Skořicový led</h2></a>
+<a id="skoricovy-led"><h2>Skořicový led</h2></a>
 
 <p>Vezme se 4 loty tlučeného cukru, lot tlučené pro-sáté skořice a bílkový sníh, míchá se to půl hodinky, nebo lépe až se dělají puchýře – a led jest hotov.</p>
 
-<a name="jahodovy-led"><h2>Jahodový led</h2></a>
+<a id="jahodovy-led"><h2>Jahodový led</h2></a>
 
 <p>Vezmi čtvrt libry tlučeného prosátého cukru, z jednoho bílku sníh a jahodové, višňové nebo rybízové šťávy, a míchej to asi čtvrt hodiny.</p>
 
 <p>Malinový led připravuje se na tentýž způsob.</p>
 
-<a name="ruzovy-led"><h2>Růžový led</h2></a>
+<a id="ruzovy-led"><h2>Růžový led</h2></a>
 
 <p>Smíchej čtvrt libry tlačeného prosátého cukru s bílkovým sněhem, pak rozmoč několik chmírek šafránu v alkermesové šťávě <i>(Alkermessaft)</i>, dej ho do toho – tak je to růžové.</p>
 
 <p>Všech těchto ledů může se upotřebit k okrašlování dortů a k dělání oplatkových obloučků. Zvláště žlutý a bílý led jest výborný, když se na oplatek namaže a jako oblouček sušit nechá.</p>
 
-<a name="zeleny-led"><h2>Zelený led</h2></a>
+<a id="zeleny-led"><h2>Zelený led</h2></a>
 
 <p>Utluč v moždíři hrst vypraných špenátových listů, šťávu proceď skrze čisté plátno do rendlíčku a nech ji vařit, až se srazí, potom k tomu rychle přilej krapýtek vody, proceď to opět skrze plátno, a tím, co v plátně zůstane, obarví se led zeleně.</p>
 
-<a name="vodni-led"><h2>Vodní led</h2></a>
+<a id="vodni-led"><h2>Vodní led</h2></a>
 
 <p>Dej na talířek na prášek utlučený a prosátý cukr, přidej k němu krapýtek vody, a míchej tím, až se z toho udělá hustá ale tekutá omáčka, potom k tomu přidej trochu pomerančové šťávy, míchej tím ještě a pouzí toho dle libosti. Chceš-li led míti růžový, přidej několik kapek alkermesové šťávy.</p>
 
-<a name="citronovy-a-pomerancovy-led"><h2>Citronový a pomerančový led</h2></a>
+<a id="citronovy-a-pomerancovy-led"><h2>Citronový a pomerančový led</h2></a>
 
 <p>Na utlučený a prosátý cukr proceď šťávu buď z jednoho citronu nebo z pomeranče, a tři to na předešlý způsob.</p>
 
-<a name="vareny-cukr-na-okrasleni-dortu"><h2>Vařený cukr na okrášlení dortů</h2></a>
+<a id="vareny-cukr-na-okrasleni-dortu"><h2>Vařený cukr na okrášlení dortů</h2></a>
 
 <p>Když jest cukr až k sedmému stupni rozpuštěn, dej do něho několik kapek citronové šťávy, dobře to promíchej a pak to skrze trychtýřek s malou dírkou lej na dort. Také se z něho mohou lejt rozličné věci buď na plechy mandlovým olejem pomazané nebo na obrácený šálek.</p>
 
-<a name="vareny-cukr-vselijakych-barev"><h2>Vařený cukr všelijakých barev</h2></a>
+<a id="vareny-cukr-vselijakych-barev"><h2>Vařený cukr všelijakých barev</h2></a>
 
 <p>Každý cukr k barvení musí se až k šestému stupni vařit, pak se nechá buď bílý, nebo se rozličně obarví.</p>
 
@@ -60,6 +60,6 @@
 
 <p>Černě se barví nejlépe čokoládou.</p>
 
-<a name="jak-se-cukrova-krupice-pripravuje-a-barvi"><h2>Jak se cukrová krupice připravuje a barví</h2></a>
+<a id="jak-se-cukrova-krupice-pripravuje-a-barvi"><h2>Jak se cukrová krupice připravuje a barví</h2></a>
 
 <p>Vezmi libru pěkného bílého suchého cukru, nejlépe od špičky, a nejdříve ho rozsekej na malé kouštinky, jak se obyčejně ku kávě sekává, pak ho kladívkem lehounce na drobno utluč; musíš s ním ale šetrně zacházet, aby neztratil lesk; pak ho prosej na papír skrze plechový cedník s hezky velkými dírkami. Co nepropadne, opět na předešlý způsob utluč, a tak pokračuj, až jest cukr všechen prosátý. Potom vezmi jiný cedník s menšími dírkami a prosej cukr zase na jiný papír. Co nyní v cedníku zůstane, podobá se trhaným krupkám, a je to tak nazvaný hrubý cukr, který se jak bílý tak i rozličné barvený k všeliké potřebě hodí. Ostatní opět prosej skrze husté sejtko, a tím zůstane v sejtku trochu drobnější, krupici se podobající cukr, a co propadne, jest cukrová mouka, která se hodí k dortům, ledům, španělským větrům a všem takovým věcem, ku kterým jest prosátého cukru nevyhnutelně zapotřebí. Jest tedy radno, aby takového cukru vždy něco, aspoň půl libry v zásobě bylo; když se něco nenadále nahodí, není potřebí se zdržovati. – Tento hrubý cukr jest k posypání rozličných pamlsků, nákypů atd. mnohem ouhlednější než drobně utlučený, a hodí se též k okrášlení dortů. Taktéž na ledy je tento cukr příhodný, a sice na čokoládový led bílý a na bílý led červený, který se takto barví: Na čistý bílý talíř dej částku těchto cukrových krupek nebo hrubého cukru, kápni naň několik kapek alkermesové šťávy, a spěšně ním míchej, aby se krupičky nerozpustily a přece aby byly navlaženy, pak to nech na vlažném, ne však na horkém místě uschnout; potom se cukr opět několika kapkami alkermesové šťávy pokropí, promíchá a nechá se sušit, a tak se pokračuje tak dlouho, až je cukr dost červený. Modře barví se na tentýž způsob šťávou fialkovou, žlutě pak v několika kapkách říčné vody rozmočeným a procezeným šafránem.</p>
