--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -1,112 +1,112 @@
 <a href="index.html" class="hlavicka"><h1>Omáčky k hovězímu masu</h1></a>
 
-<a name="omacka-cibulkova"><h2>Omáčka cibulková</h2></a>
+<a id="omacka-cibulkova"><h2>Omáčka cibulková</h2></a>
 
 <p>Dej na rendlíček kousek másla a udělej řídkou jištičku; když je již žlutá jako zlato, dej do ní trochu strouhané žemličky a nech ji tak dlouho, až dostatečně zčervená, pak skrájej zelenou cibuli, kousek staré cibule a trochu zelené petružele, hod to do té jíšky, nech to zapěnit, nalej na to hovězí polívky a nech to chvilenku povařit.</p>
 
 <p>Tak se dělá též česneková omáčka.</p>
 
-<a name="omacka-polska"><h2>Omáčka polská</h2></a>
+<a id="omacka-polska"><h2>Omáčka polská</h2></a>
 
 <p>Udělej jíšku tak jako při cibulové a česnekové omáčce, potom usekej zelený česnek, zelenou cibulku, stroužek česneku, kousek staré cibule, trochu pažitky a trochu zelené petružele, dej to do jíšky, nalej na to hovězí polívky a nech to povařit.</p>
 
-<a name="zlata-cibulova-omacka"><h2>Zlatá cibulová omáčka</h2></a>
+<a id="zlata-cibulova-omacka"><h2>Zlatá cibulová omáčka</h2></a>
 
 <p>Rozkrájej drobně půl cibule, dej ji do žejdlíkového hrnku, nalej na ni hovězí polívky a nech to chvilku povařit; dej do hrnku pěl ostrouhané, ve vodě namočené vymačkané žemličky, kousek čerstvého másla, trochu sušeného, na prášek rozetřeného šafránu, rozetři to dobře, nalej do toho tu polívku, v které se cibule vaří, rozkverluj to a nech to povařit, potom dej k tomu zažloutlé jíšky, nech to ještě povařit a dej to na stůl. Tak se dělá také česneková omáčka; k té cibulové můžeš také připojit trochu tlučeného kmínu.</p>
 
-<a name="cibulova-omacka-s-vinem"><h2>Cibulová omáčka s vínem</h2></a>
+<a id="cibulova-omacka-s-vinem"><h2>Cibulová omáčka s vínem</h2></a>
 
 <p>Usmaž půl drobně rozkrájené cibule, a když začne červenat, dej k ní kávovou lžičku mouky, dvě lžíce strouhaného domácího žitného chleba, a nech to do hnědá usmažit, potom to dej do hrnku, v kterém se obyčejně omáčka vařívá, nalej na to jeden díl vína, dva díly hovězi polívky a lžíci dobrého vinného octa, nech to povařit, upraž kousek cukru do hnědá, dej ho k tomu, a když se to opět povařilo, dej to do nádobky k tomu určené. Tato omáčka může se dáti buď k hovězímu masu, nebo jsou-li zbytky od rozličných pečeň, rozkrájej je na ouhledné řízky, dej je do kuthánku, nalej na ně tu omáčku, dej k tomu trochu drobně rozkrájené citronové kůry, trochu kaprlí, a je-li libo, také kousek sardelového másla – vždy je to dobré.</p>
 
-<a name="omacka-z-nalozene-okurky"><h2>Omáčka z naložené okurky</h2></a>
+<a id="omacka-z-nalozene-okurky"><h2>Omáčka z naložené okurky</h2></a>
 
 <p>Rozkrájej na drobninko kyselou okurku, dej ji do hrnečku, nalej na ni hovězí polívky a vinného octa, dej k tomu trochu skrájeného zeleného kopru a nech to trochu povařit. K zapražení vezmi kousek červené jíšky, kousek do tmavá upáleného a kousek bílého cukru, trochu citronové kůry, rozkloktej to a nech to ještě povařit.</p>
 
-<a name="omacka-z-cerstve-okurky"><h2>Omáčka z čerstvé okurky</h2></a>
+<a id="omacka-z-cerstve-okurky"><h2>Omáčka z čerstvé okurky</h2></a>
 
 <p>Nakrájej na drobno čerstvou oloupanou okurku, dej ji do hrnečku, přidej k ni drobně usekané zelené petruželky, trochu octa, nalej na to hovězí polívků a nech to vařit; v jiném hrnečku rozmíchej kousek čerstvého másla asi se dvěmi vařečkami mouky a s trochou vlažné polívky, nalej na to tu zvařeninu, kverluj tím, aby se neudělaly žmolky, a nech to ještě trochu povařit; když chceš omáčku nésti na stůl, zakverluj do ní jeden žloutek.</p>
 
-<a name="omacka-koprova"><h2>Omáčka koprová</h2></a>
+<a id="omacka-koprova"><h2>Omáčka koprová</h2></a>
 
 <p>Nech vařit v hrnečků hovězí polívku a vinní ocet; když‘ se to Vaří, dej do toho drobnince rozkrájený kopr do jiného hrnku dej kousek nového másla, trochu mouky trochu kyselé husté smetany a jedení nebo dva žloutky, dobře to rozmíchej, pák s tou koprovou polívkou zakloktej, nech to ještě trochu povařit – a omáčka je hotová.</p>
 
-<a name="omacka-z-koreni"><h2>Omáčka z koření</h2></a>
+<a id="omacka-z-koreni"><h2>Omáčka z koření</h2></a>
 
 <p>Udělej ze dvou lotů loje hnědou jíšku, dej do ní jednu nakrájenou cibuli, 10 zrnek pepře a 10 zrnek nového kořeni, kousek zázvoru, dva bobkové listy, kousek dymiánu, nalej na to hovězí polívky tolik, mnoho-li je na omáčku potřebí, a přidej k tomu asi dvě lžíce octa; když se vše hodně dlouho pospolu vařilo proceď to do hrnku; je-li omáčka příliš hustá přilej polívky, okus ji, a je-li málo kyselá, přidej krapýtek octa.</p>
 
-<a name="omacka-z-kerblika"><h2>Omáčka z kerblíka</h2></a>
+<a id="omacka-z-kerblika"><h2>Omáčka z kerblíka</h2></a>
 
 <p>Utluč v moždíři plnou hrst kerblíku a vymačkej šťávu skrze plátýnko, pak vezmi 3 na tvrdo vařené žloutky a několik topinek sušené a ve vinném octě namočené žemličky, oboje v moždíři dobře utluč, octem rozdělej, tu kerblíkovou šťávu k tomu přimíchej a oslaď to asi lotem cukru. Lot cukru, půl žejdlíka octa a z půl žemličky sušených topinek jest dosti na tři žloutky. Tato omáčka se dá studená na stůl v nádobkách k tomu zřízených. Kdo rád sladší, může přidat cukru. Při hostině se dá na stůl mimo této omáčky ještě jedna teplá, protože každý studené omáčky nemiluje.</p>
 
-<a name="omacka-s-kyselou-smetanou"><h2>Omáčka s kyselou smetanou</h2></a>
+<a id="omacka-s-kyselou-smetanou"><h2>Omáčka s kyselou smetanou</h2></a>
 
 <p>Nech v žejdlíkovém hrnku vařit půl žejdlíka hovězí polívky a půl žejdlíka vinného octa (je-li ocet tuze kyselý, musí být polívky více nežli octa), dej do toho jednu hrubě rozkrájenou cibuli, dva stroužky celého česneku, 6 zrnek pepře, 6 zrnek nového koření, kousek zázvoru, kousek dymiánu, 6 lístků rozmariny, a nech vše hezky povařit; potom udělej hnědou jíšku a proceď do ní tu zvařeninu. Jíšky musí být tolik, aby, když se přileje ještě půl žejdlíka kyselé smetany, byla omáčka zrovna dost hustá. Aby byla chutnější, může se k ní přidat trochu citronové kůry.</p>
 
-<a name="omacka-sardelova"><h2>Omáčka sardelová</h2></a>
+<a id="omacka-sardelova"><h2>Omáčka sardelová</h2></a>
 
 <p>Omej ve studené vodě 2 nebo 3 sardele, odděl kůstky a sardele utři s novým máslem, nalej na ně trochu polívky, trochu octa, udělej jíšku jako k okurkové omáčce, zapraž ji, nech ji povařit a dej ji na tabuli. Nechceš-li ji mít nakyslou, vynech ocet.</p>
 
-<a name="omacka-kaprlova"><h2>Omáčka kaprlová</h2></a>
+<a id="omacka-kaprlova"><h2>Omáčka kaprlová</h2></a>
 
 <p>Nech na rendlíčku zpěnit jednu malou cibulku, přidej k ni tři měchačky mouky a udělej červenou jíšku, pak na ni nalej hovězí polívky tolik, abys měla zahoustlou omáčka, přidej k ni trošinku octa, dva loty kaprlí a nech ji ještě trochu povařit.</p>
 
-<a name="omacka-z-angrestu"><h2>Omáčka z angreštu</h2></a>
+<a id="omacka-z-angrestu"><h2>Omáčka z angreštu</h2></a>
 
 <p>Dej do žejdlíkového hrnečku půl žejdlíka nezralého angreštu, nalej na něj hovězí polívku a nech to vařit, pak to proceď, v jiném hrnečku rozdělej kousek nového másla se dvěma vařečkama mouky a trochou studené smetany, a zakverluj tím tu omáčku; kdyby byla málo kyselá, přidej krapýtek octa; když se má dát na stůl, zakloktá se do ni jeden nebo dva žloutky.</p>
 
-<a name="omacka-z-rajskych-jablek"><h2>Omáčka z rajských jablek</h2></a>
+<a id="omacka-z-rajskych-jablek"><h2>Omáčka z rajských jablek</h2></a>
 
 <p>Dej na rendlíček kousek másla, čtyry velké rajské jablíčka, kousek rozkrájené cibule, několik zrnek pepře a nového koření, a nech to dusit, pak to hodně rozmačkej, nalej na to žejdlík hovězí polívky a proced to do hrnečku, přidej k tomu trochu octa a trochu vína, zapraž to bledou jíškou, dej do toho kousek cukru, trochu sekané citronové kůry a nech to ještě povařit.</p>
 
-<a name="omacka-ze-zampionu"><h2>Omáčka ze žampionů</h2></a>
+<a id="omacka-ze-zampionu"><h2>Omáčka ze žampionů</h2></a>
 
 <p>Usekej na drobno několik pěkných žampionů a nech je na kousku másla s trochou drobně nasekané zelené petruželky dusit, pak to dej do hrnečku, nalej na to hovězi polívku a trochu vína, zapraž to bledou jiškou, okořeň to trochu tlučeným pepřem a nech to hodně povařit.</p>
 
-<a name="omacka-z-ryzcu"><h2>Omáčka z ryzců</h2></a>
+<a id="omacka-z-ryzcu"><h2>Omáčka z ryzců</h2></a>
 
 <p>Vezmi několik čerstvých ryzců, kořínky odřízni, hlavičky vyper, na podlouhlé kousky rozkrájej, nech je na kastrolku s kouskem másla a trochou kmínu pod pokličkou dusit, a chvilkami podlévej po lžíci hovězí polívky; potom to dej do hrnečku, nalej na to trochu vinného octa a ještě tolik hovězí polívky, mnoho-li omáčky potřebuješ, zapraž ji hnědou jíškou, nech ji povařit, přidej několik lžic dobré husté kyselé smetany, dobře ji rozmíchej a vlej do nádobky.</p>
 
-<a name="omacka-ze-suchych-hub"><h2>Omáčka ze suchých hub</h2></a>
+<a id="omacka-ze-suchych-hub"><h2>Omáčka ze suchých hub</h2></a>
 
 <p>Namoč suché hříbky a slej s nich tu černou vodu, pak na ně nalej hovězí polívku a nech je do měkka uvařit, potom je usekej na drobno, dej je zase do té polívky, přilej k tomu trochu octa, zapraž to tmavou jíškou a nech to ještě hodně povařit.</p>
 
-<a name="omacka-z-korinku-od-zelenin"><h2>Omáčka z kořínků od zelenin</h2></a>
+<a id="omacka-z-korinku-od-zelenin"><h2>Omáčka z kořínků od zelenin</h2></a>
 
 <p>Ustrouhej jednu cibuli, půl petruželového kořínku a půl mrkve, dej to do hrnku, nalej na to hovězí polívku a nech to vařit, pak to proced, zapraž hnědou jíškou, přidej k tomu hodně zelené petružele, trochu tlučeného pepře a nech to ještě povařit.</p>
 
-<a name="omacka-na-holandsky-zpusob"><h2>Omáčka na holandský způsob</h2></a>
+<a id="omacka-na-holandsky-zpusob"><h2>Omáčka na holandský způsob</h2></a>
 
 <p>Utluč v mosazném moždíři tři na tvrdo uvařené žloutky s lotem oloupaných mandlí, dej k tomu kousek cukru, 8 lžic dobrého vinného octa, dobře to promíchej a proceď do hrnečku, v němž jsi byla dříve vařečku mouky s kouskem čerstvého másla a trochou vody rozmíchala, dej k tomu tři očištěné, na drobounko usekané sardele, trochu skrájené pažitky, trochu usekaných kaprlí, a míchej tím na plotně tak dlouho, až se utvoří hustá omáčka; pak ji odstav stranou, až ji potřebuješ.</p>
 
-<a name="studena-omacka"><h2>Studená omáčka</h2></a>
+<a id="studena-omacka"><h2>Studená omáčka</h2></a>
 
 <p>Vezmi tři na tvrdo vařené žloutky, 4 omyté sardele, z kterých kůstky jsou vyndány, a kousek bílé cibule, každé zvlášť drobnince usekej, utři to na misce, přimíchej k tomu poznenáhla 2 lžíce brabantského oleje, 4 lžíce hořčice (Senf), půl lotu tlučeného cukru, a tolik vinného octa, aby to bylo jako omáčka, a dej to buď k hovězímu masu, nebo ke studené pečeni, anebo též k modré nebo nakládané (marynirované) rybě; je-li málo ryby, můžeš buď nakládaného kapra neb ouhoře na kousky rozkrájet, urovnat ho do hlubokého talíře, polejt tou omáčkou, poklásti rozpůlenými omytými sardelemi, udělat věnec z postního aspiku a posázet ho kaprlemi. Také se může na modro vařená štika, kapr i ouhoř dohromady smíchat a dát v postní i masitý den po pečeni.</p>
 
-<a name="studena-omacka-ku-zverine"><h2>Studená omáčka ku zvěřině</h2></a>
+<a id="studena-omacka-ku-zverine"><h2>Studená omáčka ku zvěřině</h2></a>
 
 <p>Rozkrájej půl bílé cibule, 3 na tvrdo vařené žloutky, dej k tomu trochu drobně rozkrájené citronové kůry, půl lotu tlučeného cukru, asi 10 zrnek dobře utlučeného jalovce, to všecko dobře promíchej, dej k tomu dvě lžíce brabantského oleje, asi 10 lžic vinného octa, ze dvou citronů šťávu, a je-li to husté, přilej ještě octa. Tato omáčka se dává obyčejně k černé rosolované (sulcované) zvěřině; a máš-li jenom neouhledné zbytky, tedy je rozkrájej na malé řízky, urovnej na misku a polej tou omáčkou; také zbytky jelení nebo srnčí kejty i hřbetu mohou se s touto omáčkou takto připravit; nejlépe však se k tomu hodí černá zvěřina.</p>
 
-<a name="omacka-mejonezova"><h2>Omáčka mejonézová</h2></a>
+<a id="omacka-mejonezova"><h2>Omáčka mejonézová</h2></a>
 
 <p>Skrze sejtko na porcelánovou misku obráceně postavené protlač dva na tvrdo vařené a dva syrové žloutky, a s krapýtkem soli je utři, načež přidej k tomu při ustavičném mícháni tři syrové žloutky a dvanáct lotů olivového oleje, a sice dej vždy jeden žloutek a kávovou lžičku oleje, a stále míchajíc takto pokračuj, až je všecko smícháno; konečně k tomu přidej po částkách též za ustavičného míchání čtyry lžíce rozpuštěného studeného <a href="polivky-masite.html#rosol-polivkovy">polívkového rosolu</a>, z půl citronu šťávu a několik lžic estraganového octa. Dokonalé zdaření této omáčky záleží zvláště na pilném míchání.</p>
 
-<a name="kren-smetanovy"><h2>Křen smetanový</h2></a>
+<a id="kren-smetanovy"><h2>Křen smetanový</h2></a>
 
 <p>Ustrouhej dobře křen, dej ho do hrnečku, k němu trochu bílé mouky, kousek nového másla, trochu květu a oloupané, ustrouhané nebo tlučené mandle, dobře to umíchej, nech vařit dobrou smetanu, dej do ní kus cukru, zakloktej ní ten křen a, nech ho trochu povařit, potom ho vlej do omáčníku, posyp na vrchu drobet květem a dej ho na stůl. Je-li křen málo perný, musí se dát teprv, až jest ostatní povařeno.</p>
 
-<a name="kren-polivkovy"><h2>Křen polívkový</h2></a>
+<a id="kren-polivkovy"><h2>Křen polívkový</h2></a>
 
 <p>Ustrouhej křen a žemličku, dej to do hrnečku, přidej k tomu kousek nového másla, trochu květu, nech to povařit – a křen je hotov. Je-li křen málo perný, tedy se nechá žemlička v polívce povařit, pak se teprv do toho dá strouhaný křen a zamíchá se, nesmí se však již nechat vařit. Na to se i při smetanovém křenu hledět musí, protože křen při vařeni seslábne, následovně se jen příliš palčivý křen může chvilku s sebou vařit.</p>
 
-<a name="kren-kysely"><h2>Křen kyselý</h2></a>
+<a id="kren-kysely"><h2>Křen kyselý</h2></a>
 
 <p>Ustrotíhej jedno červené jablko a dej ho do omáčníku, taktéž i křen, přidej k tomu kus na citronové kůře ustrouhaného cukru a nalej na to tolik octa, až je všecko pokryto, pak tím zamíchej a dej to na stůl<b></b></p>
 
-<a name="horcice"><h2>Hořčice</h2></a>
+<a id="horcice"><h2>Hořčice</h2></a>
 
 <p>Na čtvrt libry hořčicové mouky nech svařit dva žejdlíky dobrého vinného octa s několika hřebíčky, citronovou kůrou a kouskem květu, pak dej hořčici na mísu a nalej na ni za ustavičného míchání ten vařící ocet, musíš však hodně míchat, aby se nenadělaly žmolky; když to vychladne, nalej to do flašky a ulož na chladném místě. Edo chce, může při vaření do toho dát kus cukru.</p>
 
-<a name="kysely-rosol"><h2>Kyselý rosol</h2></a>
+<a id="kysely-rosol"><h2>Kyselý rosol</h2></a>
 
 <p>Rozkrájej na kousky dvě libry hovězího, libru telecího, půl libry uzeného masa a kus jater, vlož všecko do velkého rendlíku, přidej k tomu kus rozsekaného telecího kolena, čtyry cibule, kořen petružele, jednu mrkev, jeden celer, všecko rozkrájené, též tři bobkové listy, kousek dymiánu, kousek zázvoru, několik zrnek pepře a nového koření, nalej na to šest žejdlíků vody, šest žejdlíků octa, a nech to zvolna vařit. Do jiné nádoby dej čtyry rozsekané telecí nožičky, nalej na ně šest žejdlíků vody a nech to dvě hodiny vařit, při čemž stále šum sbírati musíš: potom to proceď a nech to ještě asi na žejdlík vyvařit. Když je maso uvařeno tak, že s kostí samo odpadává, přilej k tomu tu zvařeninu z nožiček a nech to pospolu ještě povařit, pak to odstav; když se to ustálo, seber s toho všechnu mastnotu, proceď to do jiného kastrolu, rozmačkej do toho dvě celé vejce i se skořápkami, vařečkou tím pohni a nech ještě několik varů přejít; nyní přivaž čistý ubrousek ke čtyřem nohám obrácené stolice, podstav pod něj čistou nádobu a rosol do ni proceď. Hlediž k tomu, aby rosol byl čistý jako sklo; kdyby byl kalný, nech ho ještě jednou vařit, rozmačkej do něho ještě jedno vejce a opět ho proceď. Rosolu toho může se použit k okrášleni nejvzácnějších studených masitých pokrmů.</p>
 
