--- a/src/raci-zaby-sneci-a-musle.html
+++ b/src/raci-zaby-sneci-a-musle.html
@@ -1,57 +1,57 @@
 <a href="index.html" class="hlavicka"><h1>Raci, žáby, šneci a mušle</h1></a>
 
-<a name="raci-s-omackou"><h2>Raci s omáčkou</h2></a>
+<a id="raci-s-omackou"><h2>Raci s omáčkou</h2></a>
 
 <p>Uvař ve slané vodě 15 raků, pak je vyndej, klepýtka i ocásky olámej, ze skořepin udělej račí máslo, nalej naň rybí, a je-li to v den masitý, tedy hovězí polívky, a proceď to skrze sejtko, pak do toho naceď citronové šťávy, okořeň to trochu květem, a chceš-li, zapraž to, načež to vlej na raky a nech to povařit.</p>
 
-<a name="raci-se-smetanovou-omackou"><h2>Raci se smetanovou omáčkou</h2></a>
+<a id="raci-se-smetanovou-omackou"><h2>Raci se smetanovou omáčkou</h2></a>
 
 <p>Přemej raky v několika vodách, z ocásků vytahej žilky, raky narovnej buď do hrnku nebo na pánev, dej k nim trochu kmínu, trochu soli, kousek nového másla, trochu zelené petružele, nalej na ně vařícího piva a nech je vařit, až jsou pěkně červené; pak je můžeš jen tak na mísu pěkně urovnat, podlejt pod ně trochu polívky a dát je na stůl. Chceš-li však míti smetanovou omáčku, tedy rozkloktej v hrnečku několik žloutků se sladkou smetanou, a chceš-li to míti přisládlé, dej do toho kousek cukru, pak to rozkloktej tou vařící polívkou z raků, vlej to pod raky a nes je honem na stůl, aby nevystydli.</p>
 
-<a name="fasirovani-raci-s-karfiolem"><h2>Fašírovaní raci s karfiolem</h2></a>
+<a id="fasirovani-raci-s-karfiolem"><h2>Fašírovaní raci s karfiolem</h2></a>
 
 <p>Na kopu raků usekej drobně libru masa od štiky; dej k němu jednu ostrouhanou, ve vodě namočenou a vymačkanou žemličku, 3 míchané vejce, trochu květu, osol to a všecko dobře usekej a promíchej. Uvař kopu raků ve slané vodě, klepýtka a ocásky vyloupej, svrchní skořápky čistě omej, urovnej je na prkénko a nech je osáknout; ostatní vše v moždíři utluč a udělej račí máslo; načež máslo vytlač, slupiny dej do hrnku, nalej na ně vody, v které se raci vařili, dej k nim kůstky a odřízky z ryby, kus celeru, kořínek petružele, něco karfiolu, a nech to povařit. Mezitím dej na misku 3 lžíce račího másla, připoj k němu tu sekaninu, jakož i klepýtka a ocásky drobně rozkrájené, a dobře to promíchej; načež tím naplň ty vysáknuté skořepiny a hezky přimáčkni, urovnej je na kuthánek, proceď na ně té polívky, v které slupky se vařily, a nech je vařit; pak udělej trochu bílé jištičky, připraž polívku a proced ji skrze cedník opět na ty nadívané raky. Zatím nech karfiol ve slané vodě pěkně ovařit, pak vše na mísu ouhledně urovnej, omáčkou polej a dej na tabuli. – Jestli raky v masitý den takto připravuješ, vezmi místo rybího masa slepičí, kuřecí nebo kapouní prsíčka, je to mnohem chutnější. Také se může místo karfiolu vzíti špargl.</p>
 
-<a name="smazene-zaby"><h2>Smažené žáby</h2></a>
+<a id="smazene-zaby"><h2>Smažené žáby</h2></a>
 
 <p>Žáby dobře přemej, osol je a nech je asi půl hodiny v soli ležet, pak je obal v mouce, omoč v rozkloktaném vejci, obal ve strouhané žemličce, a nech je v horkém přepouštěném másle hezky do zlatova usmažit; pak je okrášli zelenou petruželkou a dej je na stůl.</p>
 
-<a name="dusene-zaby"><h2>Dušené žáby</h2></a>
+<a id="dusene-zaby"><h2>Dušené žáby</h2></a>
 
 <p>Pěkně očištěné žáby osol a nech je v soli chvíli ležet; zatím rozkrájej drobně cibulku, dej ji s máslem na uhlí, a když se trochu zapění, hoď žáby do toho a nech je dusit tak dlouho, až šťávu, kterou.ze sebe pustí, zase do sebe vtáhnou; proto se nesmějí přikrýt, aby dříve vysmáhly; je-li šťávy příliš mnoho, tedy jí trochu odlej, k žabám přidej kousek másla, jakož i nakrájené zelené petružele a trochu květu, a nech je dusit, až zůstanou jen trochu šťavnaté; pak je urovnej na teplou mísu, posyp je hustě strouhanou, do zlatova smaženou žemličkou, okolo mísy urovnej věneček z citronových čtvrtek a dej to na tabuli – Kdo žáby rád, tedy je i bez citronu takto připravené s chutí zažije. Také se mohou žáby zadělat s rozličnými omáčkami jako štika.</p>
 
-<a name="zaby-se-sardelemi"><h2>Žáby se sardelemi</h2></a>
+<a id="zaby-se-sardelemi"><h2>Žáby se sardelemi</h2></a>
 
 <p>Dobře očištěné žáby omej, posyp je solí, tlučeným bobkovým listem a pepřem, a nech je v tom půl hodiny tažet; potom vymaž dno mísy, s kterou to přijde na stůl, trochu čerstvým máslem, žáby pořádně osuš, vlož je do mísy, očisti několik sardelí a rozkrájej je na dlouhé nudle, těmi pak žáby prolož, posyp to hodně drobně nakrájenými šalotkami a kapárkami, nalej na to půl žejdlíka rakouského vína a několik lžiček octa, naceď do toho šťávu z jednoho citronu, postav to do trouby a nech to spěšně zvařit, pak to hojně posyp smaženou strouhanou žemličkou a nes to na stůl.</p>
 
-<a name="zadelavane-zaby-s-petruzelkou"><h2>Zadělávané žáby s petruželkou</h2></a>
+<a id="zadelavane-zaby-s-petruzelkou"><h2>Zadělávané žáby s petruželkou</h2></a>
 
 <p>Čistě přemyté žáby osol, dej je s kouskem nového másla na rendlíček, přikrej je a nech je dusit, až jsou měkké. Několik žab nech ve slané vodě s rozkrájenou petruželí uvařit, udělej bílou jištičku a zapraž tu polívku, v které žáby se vařily, pak ji proceď na ty dušené žáby, dej k tomu drobně rozkrájenou zelenou petruželku a trochu květu, nech to malinko povařit a dej to na stůl.</p>
 
-<a name="sneci-s-kyselym-krenem"><h2>Šneci s kyselým křenem</h2></a>
+<a id="sneci-s-kyselym-krenem"><h2>Šneci s kyselým křenem</h2></a>
 
 <p>Šneci se uvaří ve slané vodě, do nádobky se dá strouhaného křenu, naleje se na něj vinního octa, a kdo chce, může do něho dát kousek cukru, pak se šneci vysypou na mísu, přikrejou se servítem a dají se s tím křenem na stůl.</p>
 
-<a name="nadivani-sneci"><h2>Nadívaní šneci</h2></a>
+<a id="nadivani-sneci"><h2>Nadívaní šneci</h2></a>
 
 <p>Uvař půl kopy šneků ve slané vodě, pak je vyndej z domků, uřež ocásky, šneky přemej v soli, stáhni s nich tu černou kůžičku a nech je buď v rybí, nebo, je-li to v den masitý, v hovězí polívce ještě nejméně dvě hodiny vařit; domky vymej v soli a nech je vysáknout. Nádivku dělej takto: Na třicet šneků utři deset lotů másla, dej k němu čtvrt libry čistě přemytých rozetřených sardelí, s půl citronu drobně rozkrájenou kůrku, trochu květu, asi 2 nebo 3 stroužky se solí dobře utřeného česneku, trochu majoránky, a půl ustrouhané cibule, všecko dohromady hodně utři a přimíchej k tomu zvolna šest plných lžic strouhané žemličky. Potom vyndej šneky z polívky na talířek, vlej vždy do jednoho domečku kávovou lžičku polívky ze šneků, pak dej kousek nádivky, na tuto jednoho šneka, načež domek nádivkou doplň a pěkně to uhlaď. Takto pokračuj, až máš všecky domky naplněné; pak narovnej šneky na mísu, a zbylo-li něco nádivky, tedy do ní nalej té polívky, v které se šneci vařili, podlej je tím, nech je asi čtvrt hodinky, v troubě trochu opect a dej je na stůl. Také se mohou šneci dát na rošť na plech, k tomu cíli důlkami opatřený, a na uhlíčku nechat opect; lépe ale, když je pod nimi trochu omáčky.</p>
 
-<a name="sneci-s-vinni-omackou"><h2>Šneci s vinní omáčkou</h2></a>
+<a id="sneci-s-vinni-omackou"><h2>Šneci s vinní omáčkou</h2></a>
 
 <p>Uvař mandel šneků, vyndej je z domků, uřež ocásky, šneky očisti, přemej je v soli a vlažné vodě, a nech je buď v postní den v petruželové vodě, nebo v masitý den v hovězí polívce do měkka uvařit; domky nech v čisté vodě trochu vyvařit, pak je umej v soli, poklop je a nech je vysáknout. Nádivku pak dělej takto: Utři čtvrt libry nového másla se šesti loty čerstvých sardelí, dej k tomu s půl citronu drobně rozkrájenou kůru, 3 stroužky se solí rozetřeného česneku, trochu květu, jednu strouhanou žemličku, a je-li to málo slané, tedy přidej trochu soli a všecko dobře rozetři. Nyní dej vždy do jednoho domku kousek nádivky, na tuto vlož jednoho šneka, a nádivkou je opět doplň; potom je urovnej na mísu, nech trochu strouhané žemličky na másle do bledězlatova usmažit, nalej na ni trochu polívky, v které se šneci vařili, a trochu rakouského vína, dej k tomu dva loty v másle rozetřených sardelí a nech to trochu povařit, pak to vlej na šneky a nech je asi čtvrt hodiny v troubě dusit. Tato nádivka stačí na 20 až 25 šneků. Vína a polívky se dá dle potřeby, aby zastalo pod šnekama trochu omáčky.</p>
 
-<a name="sneci-ocasky"><h2>Šneci ocásky</h2></a>
+<a id="sneci-ocasky"><h2>Šneci ocásky</h2></a>
 
 <p>Šnečí ocásky se dají na máslo s drobně rozkrájenou cibulkou opect, a když cibulka začíná červenat, dají se na talíř nebo na mísu, která se kolem okrášlí smaženou strouhanou žemličkou.</p>
 
-<a name="musle-s-vinem"><h2>Mušle s vínem</h2></a>
+<a id="musle-s-vinem"><h2>Mušle s vínem</h2></a>
 
 <p>Mušle nejdříve nožem čistě oškrab, pak je v několika vodách dobře omej, načež dej na rendlík kus nového másla, půl skrájené cibule a stroužek česneku, urovnej mušle na to, podlej pod ně trochu vína, přikrej je a nech je dusit až se počnou otvírat; potom je vyndej, každou nožíkem pozorně rozevři, prázdní skořápky odhoď a ty s múšlema urovnej na mísu. Mohou se dát na stůl jen tak, a k nim na půlky nebo na čtvrtky nakrájený citron, aby si každý dle libosti zacedil; nebo je dej otevřené ještě na rendlík, podlej více vína, dej k nim trochu strouhané smažené žemličky, citronové kůry, trochu květu, zaceď je citronovou šťávou a nes je na stůl.</p>
 
-<a name="musle-na-jiny-zpusob"><h2>Mušle na jiný způsob</h2></a>
+<a id="musle-na-jiny-zpusob"><h2>Mušle na jiný způsob</h2></a>
 
 <p>Na padesát mušlí ustrouhej tři velké cibule, dej ji s půl librou másla na kastrol, rozdělej to po dně, přidej k tomu trochu usekané zelené petružele, trochu tlučeného květu, vlož na to dle předešlého udání očištěné mušle a nech je přikryté dusit; když se, začínají otvírat, rozloupni je opět jako předešle, urovnej je na mísu, ku šťávě přidej trochu vína, hodně to rozmíchej, a je-li omáčka příliš řídká, přidej trochu strouhané žemličky, pak to vlej na mušle a oblož je citronovými koláčky.</p>
 
-<a name="ustrice"><h2>Ústřice</h2></a>
+<a id="ustrice"><h2>Ústřice</h2></a>
 
 <p>Ustřice požívají se obyčejně jen syrové, zacezené citronem; kdo by však nebyl toho milovník, nechť je připraví následujícím způsobem: Otevři dvanáct pěkných holštýnských ústřic, odtrhni je od spodních skořápek a vlož je do malé pěkné misky na čtyry loty sardelové-ho másla, přidej k nim lžíci smetany a nech je zprudka odusit, sice by ztvrdly a ztratily chuť, pak je posyp trošinku povrchu strouhanou prosátou žemličkou, postříkej je máslem a přejed je rozpálenou lopatkou, aby dostaly lepší barvu.</p>
