--- a/src/rozlicne-miseninky.html
+++ b/src/rozlicne-miseninky.html
@@ -1,22 +1,22 @@
 <a href="index.html" class="hlavicka"><h1>Rozličné míšeninky</h1></a>
 
-<a name="miseninka-majorankova"><h2>Míšeninka majoránková</h2></a>
+<a id="miseninka-majorankova"><h2>Míšeninka majoránková</h2></a>
 
 <p>Utluč v moždíři suchou majoránku, prosej ji skrze sejtko, dej k ní květu, zázvoru, muškátové kuličky, trochu pepře, trochu hřebíčku, vše dobře utlučené a prosáté. To se schová, a hodí se to k obalení rozličných karbanátků.</p>
 
-<a name="miseninka-majorankova-na-jiny-zpusob"><h2>Míšeninka majoránková na jiný způsob</h2></a>
+<a id="miseninka-majorankova-na-jiny-zpusob"><h2>Míšeninka majoránková na jiný způsob</h2></a>
 
 <p>Smíchej též tlučenou a prosátou majoránku, muškátovou kuličku, květ a trochu zázvoru. Tato míšeninka může se potřebovat k čočkové polívce, k zemčatům s majoránkou, ku šnekům a podobným věcem.</p>
 
-<a name="miseninka-ze-salveje"><h2>Míšeninka ze šalvěje</h2></a>
+<a id="miseninka-ze-salveje"><h2>Míšeninka ze šalvěje</h2></a>
 
 <p>Utluč a prosej suchou šalvěj, dej k ní trochu nového kořeni, trochu pepře, trochu hřebíčku, trochu drobně rozkrájené usušené citronové kůry a trochu zázvoru. Tato míšeninka se hodí ku každému hnědě dušenému masu, zvláště ke skopovému, ku př. do skopové dušené kejty se může místo prostrkání šalvěji nadělat direk a do každé dáti trochu této míšeninky.</p>
 
-<a name="miseninka-z-dymiann"><h2>Míšeninka z dymiánn</h2></a>
+<a id="miseninka-z-dymiann"><h2>Míšeninka z dymiánn</h2></a>
 
 <p>Utluč a prosej suché dymiánové lístky, dej k nim hřebíčku, nového koření, zázvoru, pepře a citronové kůry. I tato míšeninka se může potřebovat ku hnědě dušenému kyselému masu; také se ní mohou obalovat rozličné karbanátky.</p>
 
-<a name="miseninka-se-hribkami"><h2>Míšeninka se hříbkami</h2></a>
+<a id="miseninka-se-hribkami"><h2>Míšeninka se hříbkami</h2></a>
 
 <p>Usuš drobnince rozkrájené hříbky nejdříve na čerstvém povětří, pak na vlažných kamnech nebo v troubě, aby se na prášek utlouct a prosát nechaly; když jsou prosáté, dej k nim stejné díly utlučeného květu, ustrouhané muškátové kuličky a malou částku zázvoru. Když se dá buď do polívky, nebo do omáčky anebo do postní nebo do masité míšeniny <i>(Ragout)</i> kávová lžička této míšeninky, dostane, to výbornou chuť. Místo hříbků mohou se vzíti také lanýže, nebo polovic hříbků a polovic lanýžů.</p>
 
