--- a/src/rozlicne-octy.html
+++ b/src/rozlicne-octy.html
@@ -1,14 +1,14 @@
 <a href="index.html" class="hlavicka"><h1>Rozličné octy</h1></a>
 
-<a name="ocet-estragonovy"><h2>Ocet estragonový</h2></a>
+<a id="ocet-estragonovy"><h2>Ocet estragonový</h2></a>
 
 <p>Hrst čerstvě natrhaných, nevypraných estragonových lístků dej do skleněné láhve, nalej na ně asi čtyry žejdlíky dobrého vinního octa a nech láhev dobře zandanou čtrnáct dní na slunci stát; potom ocet skrze čistý starý ubrousek proceď do malých lahviček, zandej je a uschovej k potřebě.</p>
 
-<a name="ocet-bylinkovy"><h2>Ocet bylinkový</h2></a>
+<a id="ocet-bylinkovy"><h2>Ocet bylinkový</h2></a>
 
 <p>Do čtyr žejdlíků octa dej estragonových lístků něco více nežli předešle, přidej k tomu trochu soli, dvě pepřikové lusky, několik šalotek, trochu kerblíku, trochu bezového květu a několik zrnek celého pepře, láhev dobře zandej a postav ji na slunce, musíš ní ale častěji pohnouti. Za čtrnáct dni nebo za tři neděle ocet proceď a uschovej jako předešlý.</p>
 
-<a name="ocet-malinovy"><h2>Ocet malinový</h2></a>
+<a id="ocet-malinovy"><h2>Ocet malinový</h2></a>
 
 <p>Na dva žejdlíky pěkných zralých malin nalej čtyry žejdlíky dobrého vinního octa a nech to dobře přikryté asi šest dni nepohnutě stát; potom ocet proceď skrze čisté plátno do jiné nádoby, a když. se usadí, opět ho proceď, načež ho nalej do malých lahviček, zandej je dobře a uschovej.</p>
 
@@ -16,15 +16,15 @@
 
 <p>Ocet jahodový připravuje se tak jako malinový.</p>
 
-<a name="ocet-rybizovy"><h2>Ocet rybízový</h2></a>
+<a id="ocet-rybizovy"><h2>Ocet rybízový</h2></a>
 
 <p>Rozmačkej dva žejdlíky rybízu, nalej na něj máz dobrého octa a nech ho čtyry dni stát, načež ho skrze plátno proceď a uschovej. Může se též jako malinový s cukrem zvařit.</p>
 
-<a name="ocet-fialkovy"><h2>Ocet fialkový</h2></a>
+<a id="ocet-fialkovy"><h2>Ocet fialkový</h2></a>
 
 <p>Dej do skleněné láhve žejdlík otrhaného fialkového květu, nalej na něj tři žejdlíky vinního octa a postav to na slunce; čtrnáctý den to skrze čisté plátno proceď a v malých lahvičkách uschovej. I tento ocet vyznamenává se krásnou svou barvou a chutí.</p>
 
-<a name="ocet-citronovy"><h2>Ocet citronový</h2></a>
+<a id="ocet-citronovy"><h2>Ocet citronový</h2></a>
 
 <p>Oloupej a okrájej kůru se čtyr citronů, načež ji i tuk skrájej na kostky, dej to do skleněné láhve, nalej na to dva žejdlíky dobrého octa, zandej láhev a nech to asi deset dní na slunci stát.</p>
 
