--- a/src/uvod.html
+++ b/src/uvod.html
@@ -1,6 +1,6 @@
 <a href="index.html" class="hlavicka"><h1>Úvod</h1></a>
 
-<a name="dulezite-predbezne-pouceni"><h2>Důležité předběžné poučení</h2></a>
+<a id="dulezite-predbezne-pouceni"><h2>Důležité předběžné poučení</h2></a>
 
 <p>Čistota, pořádek a dobré vyhovění každé i maličké věci v kuchyni jest základ celého umění kuchařského; pročež přáli jest, aby si nastávající kuchařky následujícího poučení bedlivě všimly.</p>
 
