--- a/src/vejce.html
+++ b/src/vejce.html
@@ -1,70 +1,70 @@
 <a href="index.html" class="hlavicka"><h1>Vejce</h1></a>
 
-<a name="vejce-na-francouzsky-zpusob"><h2>Vejce na francouzský způsob</h2></a>
+<a id="vejce-na-francouzsky-zpusob"><h2>Vejce na francouzský způsob</h2></a>
 
 <p>Uvař vejce na tvrdo, rozkroj je v půli, vyndej žloutky a utři je s kouskem másla, dej k tomu drobnince usekané maso od štiky, jednu ostrouhanou, ve mléce máčenou vymačkanou žemličku, trochu zelené petružele a jeden nebo dva syrové žloutky, trochu květu, všecko dobře utři, osol to a naděj tím ty rozpůlené vejce, pak je dej zase dohromady, obvaz je nití, omoč je v roztlučených vejcích, obal ve strouhané žemličce a nech je usmažit; potom udělej dobrou omáčku ze žampionů nebo ze smržů, s vajec sejmi nitě, polej je tou omáčkou a nech je v ní ještě spejchnout.</p>
 
-<a name="nadivane-vejce"><h2>Nadívané vejce</h2></a>
+<a id="nadivane-vejce"><h2>Nadívané vejce</h2></a>
 
 <p>Uvař vejce na tvrdo,  rozkroj je v půli, žloutky vyndej a utři je s kouskem másla, dej k tomu ostrouhanou, ve smetaně máčenou vymačkanou žemličku, zelenou petružel trochu citronové kůry, trochu květu, osol to a dobře utři, pak tím vejce naděj a narovnej je na máslem vymazanou mísu; co od nádivky zbyde, dej k nim, polej je trochu smetanou, na každé vajíčko dej kouštínek másla, a nech to v troubě trochu upect, hlediž ale k tomu, aby se to nevysušilo, sice by to bylo tuze mastné.</p>
 
-<a name="nadivane-vejce-na-jiny-zpusob"><h2>Nadívané vejce na jiný způsob</h2></a>
+<a id="nadivane-vejce-na-jiny-zpusob"><h2>Nadívané vejce na jiný způsob</h2></a>
 
 <p>Upeč omeletky asi z desíti vajec, usekej hříbky a nech je se zelenou petruželí a trochou pepřem na másle usmažit, pak je namaž na ty omeletky, každou zaviň, narovnej je pěkně na rendlíček jako štrudle, rozkloktej ještě několik vajec, osol je, dej do nich buď zelené petružele nebo drobně rozkrájenou pažitku, polej tím ty zavinuté omeletky a dej je upect buď do trouby nebo do uhlí, které vespod i navrch dáti musíš.</p>
 
-<a name="nadivane-vejce-s-rakami"><h2>Nadívané vejce s rakami</h2></a>
+<a id="nadivane-vejce-s-rakami"><h2>Nadívané vejce s rakami</h2></a>
 
 <p>tvař vajec mnoho-li jich potřebuješ na tvrdo, rozřízni je na půlky a vyndej žloutky; na 12 tvrdých vajec udělej čtyry míchané vejce, ty tvrdé žloutky drobnince usekej a dej je k těm míchaným vejcím, utři trochu račího másla, dej k němu půl druhé ostrouhané, ve smetaně máčené, dobře vymačkané žemličky, pak drobně usekané račí ocásky a klepýtka, trochu květu, trochu soli, dej k tomu ty míchané vejce a dobře to dohromady utři, pak tím nadívej ty rozpůlené bílky a urovnej je pěkně na mísu; co od nádivky zbyde, rozmíchej sladkou smetanou a nalej to na vejce, na každé vajíčko dej kousek račího másla, nech to v troubě do červena opect a nes to na stůl.</p>
 
-<a name="michane-vejce"><h2>Míchané vejce</h2></a>
+<a id="michane-vejce"><h2>Míchané vejce</h2></a>
 
 <p>Nech na rendlíčku rozpustit kousek másla, rozkloktej v hrnečku dle potřeby vajec, vlej je do másla, osol je a míchej nimi zvolna, aby zůstaly v kouskách, pak je vyndej na talíř a posyp je hojně čerstvou, drobně nakrájenou pažitkou.</p>
 
-<a name="michane-vejce-se-sardelemi"><h2>Míchané vejce se sardelemi</h2></a>
+<a id="michane-vejce-se-sardelemi"><h2>Míchané vejce se sardelemi</h2></a>
 
 <p>Vraz do hrnku vajec mnoho-li chceš, rozkloktej je, dej do nich s novým máslem rozetřené sardele, nech na rendlíku rozpustit máslo, vlej vejce do něho a zacházej s nimi jako předešle.</p>
 
-<a name="michane-vejce-se-hribkami"><h2>Míchané vejce se hříbkami</h2></a>
+<a id="michane-vejce-se-hribkami"><h2>Míchané vejce se hříbkami</h2></a>
 
 <p>Rozkrájej drobně hříbky, dej je na máslo, osol je a nech je znenáhla dusit, přidej k nim zelenou drobně usekanou petružel a trochu pepře, a nech je do měkka vysmahnout; pak rozkloktej v hrnku vajec kolik chceš, vlej je na rendlíček do rozpuštěného másla a udělej obyčejné míchané vejce; potom z toho udělej na míse kříž, dej totiž dva díly vajec a dva díly hub, anebo je-li hub mnoho a vajec málo, dej houby do prostřed a z vajec udělej okolo věnec; také se to může udělat obráceně, vejce do prostřed a okolo věnec z hub.</p>
 
-<a name="michane-vejce-s-rakami-a-sparglem"><h2>Míchané vejce s rakami a šparglem</h2></a>
+<a id="michane-vejce-s-rakami-a-sparglem"><h2>Míchané vejce s rakami a šparglem</h2></a>
 
 <p>Uvař 30 raků a 30 šparglů ve slané vodě, pak očisti od raků ocásky, žluč vyndej a ze slupek dělej račí máslo; špargl ale, jak dalece jest měkký a zelený, rozkrájej na malé kouštínky jako hrášky, a hlavičky vlož zvlášť do rozpuštěného másla, aby zůstaly teplé, nesmějí se však škvařit. Potom vraz do hrnku pro 6 osob 10 vajec, osol je, dej k nim 15 na kousky rozkrájených račích ocásků a ten rozkrájený špargl, vlej to do rozpuštěného másla a udělej obyčejné míchané vejce; když jsou hotové, dej je na teplý talíř, těch druhých 15 ocásků a ty šparglové hlavičky urovnej vůkol do věnečka, posyp to trochu pepřem, pokrop račím máslem a dej to na tabuli. Místo obyčejného másla může se k míchaným vejcím vzít račí máslo, je to tím chutnější.</p>
 
-<a name="vejce-s-houbami"><h2>Vejce s houbami</h2></a>
+<a id="vejce-s-houbami"><h2>Vejce s houbami</h2></a>
 
 <p>Rozkloktej a osol několik vajec, na omeletkové formičce nech rozpustit máslo, nalej na ni polovic těch vajec a udělej omeletku, polož ji na máslem vymazanou misku tím opečeným vespod, usekej kousek uvařené štiky a nech ji s houbičkami, buď se hříbky anebo žampionky, a trochu zelené petruželky na čerstvém másle –usmažit, pak tím pomaž, tu omeletku, upeč ještě jednu, tu zase na to přiklop tím opečeným navrch, nech to ještě trochu opect – a je to hotovo.</p>
 
-<a name="svitek-z-vajec-s-honbami"><h2>Svítek z vajec s honbami</h2></a>
+<a id="svitek-z-vajec-s-honbami"><h2>Svítek z vajec s honbami</h2></a>
 
 <p>Uvař 6 vajec na tvrdo a rozkrájej je na lístky; ostrouhej jednu žemličku, rozkrájej ji na tenké lístky, rozkloktej 3 žloutky a jedno celé vejce v půl žejdlíku sladké smetany, a polej tím tu rozkrájenou žemličku, aby se rozmočila. Z kusu štiky, nebo kapra, nebo lína vyber všecky kůstky, maso rozkrájej na kostky, osol ho trochu, dej k němu rozkrájené zelené petružele, trochu květu, a nech ho s rozkrájenou cibulkou a se smržemi nebo hříbkami dusit. Nyní vymaž novým máslem buď formu nebo bunclový kuthánek anebo mísu, posyp ji žemličkovou kůrkou, dej do ni vrstvu namočené žemličky, pak vrstvu lístků z vajec, potom vrstvu rybí sekaninky, na to zase vrstvu žemličky, pak zase vejce, a tak pokračuj, až je vše na misce; každou vrstvu pokrop buď račím nebo rozpuštěným máslem, a konečně to polej smetanou, ve které žemlička se močila. Pakli všecka smetana do žemličky vsákla, tedy rozkloktej ve smetaně ještě jedno vejce a jeden žloutek, trochu to osol a nalej to na ten svítek; posyp ho strouhanou žemličkou, pokrop máslem a nech ho v troubě hezky do zlatova vypect. Na svítek však se nesmí nalejt smetany tolik, až by se zatopil, nýbrž jen tolik, co by do polovičky ve smetaně byl, sice by se nevypekl, ale rozblebtal. Na stůl se dá v téže nádobce, v které se pekl, protož musí býti čistá.</p>
 
-<a name="sazene-vejce-se-sardelemi"><h2>Sazené vejce se sardelemi</h2></a>
+<a id="sazene-vejce-se-sardelemi"><h2>Sazené vejce se sardelemi</h2></a>
 
 <p>Nech máslo na rendlíčku rozehřát, vraz do něho vajec kolik chceš jedno vedle druhého, mezi každé vajíčko dej hromádku s máslem utřených sardelí, posol je trochu, dej vespod i navrch uhlí a nech je tak upect; dej ale pozor, aby nepřešly, sice nejsou dobré.</p>
 
-<a name="vejce-na-kyselo"><h2>Vejce na kyselo</h2></a>
+<a id="vejce-na-kyselo"><h2>Vejce na kyselo</h2></a>
 
 <p>Nech na kastrolku rozpustit dva loty čerstvého másla, přimíchej k němu vařečku mouky a nech to spejchnout, pak do toho nalej několik lžic octa, zamíchej to, načež přilévej znenáhla dobrého mléka, a stále tím míchej, až máš dostatečně omáčky, a když se tato vaří, vraz do ní vajec kolik chceš jedno vedle druhého a trochu to osol; když pak vejce začnou tuhnout, tedy jedno po druhém opatrně obrať, nech je ještě malou chvilenku povařit – a jsou hotové.</p>
 
-<a name="vejce-se-sladkou-smetanou"><h2>Vejce se sladkou smetanou</h2></a>
+<a id="vejce-se-sladkou-smetanou"><h2>Vejce se sladkou smetanou</h2></a>
 
 <p>Uvař na tvrdo 8 vajec, oloupej je, 3 rozřízni a žloutky z nich vyndej, bílky a ostatních 5 vajec rozkrájej na nudličky; potom dej na kuthánek asi dva loty nového másla, udělej bílou, hezky zapěněnou jištičku, nalej na ni vařící sladké smetany, aby z ní byla hezky hustá kaše, a nech ji vychladnout; pak ji hezky utři, vraz do ní dva žloutky a zamíchej do ní ty rozkrájené vejce, dej však pozor, aby se nerozmíchaly, osol je, vymaž máslem mísu, v které mají přijití na stůl, a dej je do ní, ty 3 žloutky drobně rozkrájej, prosej je skrze cedník na vejce a nech je v troubě půl hodiny pect. Aby mísa nepraskla, posype se plech buď solí nebo popelem, a na to se teprva mísa postaví. Jsou-li smržičky tedy se mohou nechat se zelenou petruželkou na másle dusit a může se z nich udělat věneček okolo mísy. Také se k tomu mohou přimíchat račí ocásky.</p>
 
-<a name="vejce-s-kyselou-smetanou"><h2>Vejce s kyselou smetanou</h2></a>
+<a id="vejce-s-kyselou-smetanou"><h2>Vejce s kyselou smetanou</h2></a>
 
 <p>Uvař 8 vajec na tvrdo, ze třech vyndej žloutky, bílky a ostatních 5 vajec rozkrájej na kostky; pak utři asi 3 loty nového másla, vraz do něho 4 syrové žloutky, osol to, dej k tomu asi kávovou lžičku mouky, asi malý žejdlik hezky husté kyselé smetany, v nížto jsi byla rozmíchala dvě lžíce dobrého vinního octa, dobře vše promíchej a posléz do toho zvolna zamíchej ty na kostky rozkrájené vejce; nyní vymaž kuthánek nebo mísu novým máslem, vlej to do ní, ty 3 žloutky drobnince rozkrájej a prosej je skrze cedník nebo řídké drátěné sejtko na vejce, pokrop to máslem a nech to v&nbsp;troubě upect. Kdo je milovník pepře, může ním vejce trochu posypat; nebo se také může pepř zvlášť na stůl dát, aby si každý dle libosti posloužil.</p>
 
-<a name="vejce-s-okurkami"><h2>Vejce s okurkami</h2></a>
+<a id="vejce-s-okurkami"><h2>Vejce s okurkami</h2></a>
 
 <p>Udělej asi z osmi pěkných sardelí máslo, hled ale, aby máslo bylo čerstvé; pak uvař na tvrdo asi 3 vejce, a usekej bílky zvlášť a žloutky také zvlášť; potom roztluč asi 10 vajec a udělej je jako obyčejné <a href="#michane-vejce">míchané vejce</a>, nesmějí ale ztvrdnout; když jsou hotové, dej je na teplý talíř, posyp je těmi rozkrájenými bílky, ze sardelového másla udělej do věnečka pěkné hromádky a posyp je těmi sekanými žloutky. Okurky na půlky rozkrájené urovnej do věnečka okolo talíře.</p>
 
-<a name="smazene-vejce-s-horcici"><h2>Smažené vejce s hořčici</h2></a>
+<a id="smazene-vejce-s-horcici"><h2>Smažené vejce s hořčici</h2></a>
 
 <p>Nech na malém kastrolku rozpálit kousek másla, vraz do něho jedno vejce, a hned ho plechovou lžicí dohromady shrň a urovnej, aby zůstalo hezky kulaté, a nech ho zprudka smažit, aby neztvrdlo; když je žloutek již bílkem potažen, tedy vejce vyndej na misku na teplém místě postavenou, do másla vraz hned zase jiné vejce, a tak pokračuj, až jich máš tolik, kolik jich potřebuješ, á každé povrchu malinko osol. Omáčku dělej takto: Usmaž na másle půl drobounce skrájené cibule do zlatová, přidej k ní čtyry lžíce hořčice, lžíci estragonového nebo vinního octa, malý kousek cukru, a nech to zvařit. Když to chceš dáti na stůl, tedy vejce na misce urovnej a podlej je omáčkou.</p>
 
-<a name="ztracene-vejce"><h2>Ztracené vejce</h2></a>
+<a id="ztracene-vejce"><h2>Ztracené vejce</h2></a>
 
 <p>Podle toho, mnoho-li vajec chceš míti, dej na rendlík stejné díly vody a octa, osol to trochu, a když se to vaří, vraz do toho čerstvé vejce jedno vedle druhého a nech je jen chvilku vařit, aby byly jak říkáme na hniličku; pak ocet s nich slej, otřepené kraje odkroj, a nalej na ně studené vody, aby neztvrdly. Utři s kouskem másla dvě očištěné sardele, dej je do hrnečku, přidej k nim dvě vařečky mouky a dva žloutky, rozmíchej to, načež k tomu přidej ještě lžíci octa a dvě lžíce vina, trochu zelené usekané petružele a tlučeného pepře, nalej na to slané petruželové vody, postav to na plotnu, a stále tím kloktej, až to zhoustne, nesmí se to však srazit; potom vyndej vejce na misku a polej je tou omáčkou.</p>
 
