--- a/src/zavarene-cele-ovoce.html
+++ b/src/zavarene-cele-ovoce.html
@@ -1,6 +1,6 @@
 <a href="index.html" class="hlavicka"><h1>Zavařené celé ovoce</h1></a>
 
-<a name="jak-se-ovoce-v-pare-zavaruje"><h2>Jak se ovoce v páře zavařuje</h2></a>
+<a id="jak-se-ovoce-v-pare-zavaruje"><h2>Jak se ovoce v páře zavařuje</h2></a>
 
 <p>V letě a na podzim, když je hojnost rozličného ovoce, měla by ho každá hospodyně zavařiti a jím pro zimu se zaopatřiti; jestit ono v kuchaření často vítanou pomůckou. K účeli tomuto musí se vždy vzíti nejpěknější a ještě nepřezralé ovoce, zavaření pak děje se následujícím způsobem:</p>
 
@@ -8,73 +8,73 @@
 
 <p>Dle toho způsobu může se všechno ovoce zavařovat, meruňky a broskve však se musejí oloupat, rozpůlit a pecky z nich vyndat.</p>
 
-<a name="visne-v-cukru-zavarene"><h2>Višně v cukru zavařené</h2></a>
+<a id="visne-v-cukru-zavarene"><h2>Višně v cukru zavařené</h2></a>
 
 <p>Na libru višní pokrop nebo navlaž čistou vodou libru cukru a nech ho v čisté nádobě na plotně rozpustit. Od pěkných zralých višní uřízni vždy půl šťopky, přemej je v čisté vodě, vhod je do toho cukru a nech je několik minut povařit, načež je vyber á nech je na míse vychladnout. Do té šťávy dej půl lotu skořice, půl lotu hřebíčku, a nech ji vařit, až hezky zhoustne, pak ji proceď skrze čistý šat a nech ji vystydnout. Nyní višně narovnej do sklenic, vlej na ně tu šťávu, sklenice pevně zadělej a ulož je do suchého místa. Taktéž se i amorelky zavařujou.</p>
 
-<a name="visne-v-octe-nalozene"><h2>Višně v octě naložené</h2></a>
+<a id="visne-v-octe-nalozene"><h2>Višně v octě naložené</h2></a>
 
 <p>Čtyry žejdlíky vinního octa a půl libry cukru nech spolu povařit, přičemž tvořící-se pěnu seber a pak to nech vychladnout. Od zralých višní šťopky buď docela otrhej nebo vždy půl šťopky. uřízni, višně narovnej do sklenic, posyp je trochu hrubě tlučeným hřebíčkem nebo skořicí a nalej na ně toho vychladlého octa tolik, až jsou pohrouženy, a sklenice pevně zavaž; čtvrtého dne ocet slej, nech ho zase povařit a vychladnout, načež jej opět vlej na višně; osmého dne to ještě jednou opakuj, a když pak ocet opět na višně naleješ, tedy sklenice pevně zadělej a k potřebě uschovej.</p>
 
 <p>Na tentýž způsob se i švestky nakládají.</p>
 
-<a name="merunky-v-cukru-zavarene"><h2>Meruňky v cukru zavařené</h2></a>
+<a id="merunky-v-cukru-zavarene"><h2>Meruňky v cukru zavařené</h2></a>
 
 <p>Oloupej a rozpůli zralé sice, ne však tuze měkké meruňky. Na libru takto připravených meruněk nech v mosazném kotlíku něco víc než libru cukru s několika lžícemi vody rozpustit, a když se opění, vlož do něho meruňkové půlky jednu vedle druhé a nech je tak dlouho vařit, až se zdají dost měkké, aby se ale nerozpadávaly. Když jedny vyndáš, dej tam druhé, a tak pokračuj, až jsou všecky; potom je narovnej do čistého kuthánku, nalej na ně tu šťávu, ve které se vařily, přikrej je archem papíru a nech je přes noc stát; druhého dne meruňky vyber ze šťávy, vlož je do čisté skleněné nádobky, šťávu nech ještě jednou vařit, až trochu zhoustne, a když vychladne, vlej ji opět na meruňky, nádobku obvaz papírem a ulož ji do suchého studeného místa.</p>
 
 <p>Broskve zavařují se na tentýž způsob.</p>
 
-<a name="sipky-v-cukru-zavarene"><h2>Šípky v cukru zavařené</h2></a>
+<a id="sipky-v-cukru-zavarene"><h2>Šípky v cukru zavařené</h2></a>
 
 <p>Ze šípků, které jsou teprva trhány, když je mráz obešel, vyber pecičky, šípky vlož do kamenného kuthánku, nalej na ně vřelé vody, ale hned ji zase sceď, sice by šípky tuze změkly, načež je rozlož na suchý čistý šat, aby uschly, a pak je dej do skleněné nádobky. Nech cukr s vodou zvařit, a když se opění, nech ho trochu vychladnout, pak ho vlej na šípky; druhého dne cukr sceď, nech ho zase povalit a vychladnout, pak jej opět vlej na šipky; tak to opakuj tři dni po sobě, třetího dne pak nádobku dobře obvaz a postav ji na studené suché místo.</p>
 
-<a name="zavareny-angrest"><h2>Zavařený angrešt</h2></a>
+<a id="zavareny-angrest"><h2>Zavařený angrešt</h2></a>
 
 <p>Očisti s pěkného velkého ale ještě hodně tvrdého angreštu paličky i stopky, načež každé zrnko po straně trochu rozřízni a pomocí tenkého dřívka vyber z něho všecky pecičky, potom dej angrešt do čisté vody a postav ho k ohni, vařit se ale nesmí. Když je voda vřelá a zrna navrch vyplují, tedy to odstav od ohně a přikrej to, tak angrešt docela změkne; potom jej vyber děravou lžicí a dej ho do studené vody. Nyní učisti na libru angreštu libru <a href="#visne-v-octe-nalozene">cukru</a>, angrešt vyber z vody, vlož ho do cukru, přikrej to papírem a nech to přes noc stát. Druhého dne cukr slej, proceď ho skrze cedník a nech ho trochu silněji zvařit, přičemž pěnu seber; potom dej angrešt zase do cukru, nech přes to přejít jeden var, přikrej to opět papírem a nech to zase přes noc stát. Třetího dne cukr opět slej, nech ho ještě silněji zvařit, dej angrešt do něho, nech to chvilenku povařit a zase to přes noc uschovej. Čtvrtého dne konečně cukr slej, přidej k němu ještě několik lotů učistěného cukru, nech jej hodně do husta zvařit, vlož angrešt do něho a nech ho jen minutku s sebou povařit, načež jej odstav, a když trochu prochladne, dej ho do malých skleniček, a teprva když ouplně vystydne, obvaz sklenice papírem.</p>
 
-<a name="zavareny-rybiz"><h2>Zavařený rybíz</h2></a>
+<a id="zavareny-rybiz"><h2>Zavařený rybíz</h2></a>
 
 <p>Na libru pěkných oškubaných rybízových zrnek nech libru cukru se žejdlíkem vody vařit, až se táhne, přičemž pěnu stále sbírat musíš, pak dej do něho rybíz, odstav to od ohně, přikrej to papírem a nech to tak přes noc stát. Druhého dne dej rybíz na sejtko, šťávu nech protéct na jiný čistý kastrol, načež ji nech do husta zvařit, vlož rybíz opět do ní a nech přes to ještě jen jeden var přejít; když pak rybíz prochladne, dej ho do sklenic, a když ouplně vystydne, obvaz sklenice papírem.</p>
 
-<a name="rybiz-v-octe-nalozeny"><h2>Rybíz v octě naložený</h2></a>
+<a id="rybiz-v-octe-nalozeny"><h2>Rybíz v octě naložený</h2></a>
 
 <p>Natrhej pěkných celých rybízových hrozníčků, vyper je ve studené vodě a nech je osáknout, pak jich vlož vrstvu na dno veliké sklenice, posyp je hojně tlučeným cukrem, na to dej opět hrozníčky a cukr, a tak pokračuj, až je sklenice na prst neplná, načež to polej dobrým vinním octem a nech to tak přes noc stát. Druhého dne ocet slej a nech ho zvařit, přičemž pěnu sbírej, a do octa přidej kousek skořice a dva hřebíčky; pak dej rybíz na hlubokou misku, nalej na něj ten vařící ocet, přikrej to a nech to tak dva dni stát. Potom ocet opět slej a nech ho zase zvařit, načež rybíz do něho vlož, odstav to od ohně, a když to ouplně vystydne, dej to do sklenic, obvaz je a uschovej. V zimě se těchto hrozníčků používá jako kompotu.</p>
 
-<a name="zavarene-vinni-zrni"><h2>Zavařené vinní zrní</h2></a>
+<a id="zavarene-vinni-zrni"><h2>Zavařené vinní zrní</h2></a>
 
 <p>Oškubej s hroznů nejpěknější, ne však ještě docela zralé zrní, načež každé zrnko po straně trochu nařízni malým nozejčkem a tímto vyber z něho opatrně všecky pecičky; potom dej zrní do horké vody a nech je v ní přikryté tak dlouho vařit, až změkne, pak je děravou lžicí vyndej na sejtko a nech je osáknout. Na libru zrní nech libru cukru se žejdlíkem vody ke třetímu stupni zvařit, pak dej zrní do mísy, polej je tím zvařeným cukrem a nech to přes noc přikryté stát. Druhého dne slej cukr do čistého kastrolu a nech jej hodně do husta zvařit, přičemž tvořící-se pěnu pilně sbírat musíš, potom dej zrní do něho, nech přes to přejít jeden var a odstav to od ohně; když to docela vychladne, dej to do sklenice a obvaz to papírem.</p>
 
-<a name="zavareny-meloun"><h2>Zavařený meloun</h2></a>
+<a id="zavareny-meloun"><h2>Zavařený meloun</h2></a>
 
 <p>Rozkroj v půli dorostlý sice ale ne docela zralý meloun, vyndej z něho všechnu dřeň, pak meloun oloupej, rozkrájej ho na stejné podlouhlé kousky, vlož je do čistého rendlíku, nalej na ně vody smíšené se šťávou jednoho citronu, postav to na oheň a nech to jen jednou převárnout. Na libru melounu nech libru cukru se žejdlíkem vody vařit, až se trochu táhne, načež meloun opatrně vyndej a vlož ho do cukru, ve kterém ho nech jednou povařit, pak to odstav od ohně, přikrej to papírem a nech to tak přes noc stát. Druhého dne cukr sceď, nech ho trochu silněji zvařit, pak dej meloun zase do něho, nech to jen jednou povařit a opět to nech přikryté přes noc stát. Tak to opakuj ještě třetího dne. Čtvrtého dne cukr slej, nech jej hodně hustě zvařit, pak dej opět meloun do něho a nech to ještě jednou povařit, načež to odstav od ohně, a když to docela vychladne, dej to do nějaké Široké nádoby, náležitě ji obvaz a ulož. Poněvadž meloun rád porušení bere, tedy to po nějakém čase prohlédni, a kdyby se to chtělo kazit, tedy to musíš zčerstva opět převařit.</p>
 
-<a name="zavareny-ananas"><h2>Zavařený ananas</h2></a>
+<a id="zavareny-ananas"><h2>Zavařený ananas</h2></a>
 
 <p>Oloupej ananas a rozkrájej ho na tenké lístky. Nech ua čistém rendlíku jeden díl vody a dva díly vína vařit, vlož do toho ten rozkrájený ananas a nech ho chvilenku povařit, pak ho vyndej a nech osáknout. Mezitím nech tolik cukru, mnoho-li ananas obsahuje, s jedním dílem vody a jedním dílem vína zvařit, až se táhne, načež ananas do něho vlož a nech ho jednou povařit, pak to přikrej papírem a nech to tak přes noc stát. Druhého dne cukr slej a nech ho do husta zvařit, pak do něho ananas opět vlož a nech ho ještě jednou povařit; když to docela vychladne, dej to do sklenic, náležitě je obvaz a ulož.</p>
 
-<a name="zavarena-gdoulova-jablka"><h2>Zavařená gdoulová jablka</h2></a>
+<a id="zavarena-gdoulova-jablka"><h2>Zavařená gdoulová jablka</h2></a>
 
 <p>Pěkné velké, zralé gdoule nakrájej na dlouhé stejné dílky, oloupej je a vyber z nich ohryzky a jádra, pak je dej do vařící vody a nech je do měkka uvařit, načež je vyndej na sejtko a nech je osáknout. Mezitím nech na libru jablek libru cukru se žejdlíkem vody zvařit, pak dej jablka do misky, nalej na ně ten uvařený cukr a dále pokračuj zcela tak jako při <a href="#zavareny-meloun">vaření melounu</a>.</p>
 
-<a name="zavarene-fiky"><h2>Zavařené fíky</h2></a>
+<a id="zavarene-fiky"><h2>Zavařené fíky</h2></a>
 
 <p>Pěkné, ještě nedozralé fíky propíchej několikrát shora malým nožejčkem, vlož je na chvíli do vařící vody, ale nenech je vařit, pak je vyndej a vlož je do studené vody. Druhého dne dej fíky do jiného kastrolu, nalej na ně čerstvou vodu, přidej k nim krapýtek soli, hrst špenátových lístků, několik lžic octa, a nech je vařit, až změknou, což lehce poznáš; pak je vyndej, vlož je do čerstvé studené vody, a když vystydnou, vyndej je na sejto a nech je osáknout. Potom je dej na mísu, a je-li jich libra, tedy zvař a <a href="#visne-v-octe-nalozene">učisti</a> libru cukru, vlej ho na fíky, přikrej je papírem a nech je tak přes noc stát. Druhého dne cukr slej, nech ho zvařit, vlej ho zase na fíky a nech to opět přes noc stát. Tak to opakuj ještě po dva dni. Pátého dne nech cukr do husta zvařit, vlož fíky do něho, nech je jednou povařit, načež je odstav od ohně, a když docela vystydnou, dej je do sklenic, obvaz je a uschovej.</p>
 
-<a name="zavarene-muskatove-hrusticky"><h2>Zavařené muškátové hruštičky</h2></a>
+<a id="zavarene-muskatove-hrusticky"><h2>Zavařené muškátové hruštičky</h2></a>
 
 <p>Oloupej libru malinkých muškátových, ne přezralých hruštiček, štopičky oškrab, každou hruštičku tenkou jehlou několikrát propíchni, a klad je hned do studené vody, aby nezčernaly, potom je dej na čistý kastrol, nalej na ně čistou vodu, přidej k nim kousek kamence a nech je do měkka uvalit, pak je vlož do studené vody, a když vystydnou, vyndej je na mísu, polej je řídce zvařeným cukrem (na libru hruštiček stačí tři čtvrtě libry cukru) a nech je přikryté papírem do druhého dne stát; načež po čtyry dni opakuj převaření cukru, jak v předešlých receptech udáno jest; pátého dne nech cukr do husta zvařit, vlož hruštičky do něho a nech je jednou povařit, pak je odstav od ohně, a když vystydnou, uschovej je ve sklenici. – Tyto hruštičky mohou se též <a href="#jak-se-ovoce-v-pare-zavaruje">vařiti v páře</a>, jen že se musejí dříve trochu ve vodě ovařit, pak teprva s rozpuštěným cukrem do sklenice dát a jak udáno dále pokračovat.</p>
 
-<a name="citronada-v-cukru-zavarena"><h2>Citronáda v cukru zavařená</h2></a>
+<a id="citronada-v-cukru-zavarena"><h2>Citronáda v cukru zavařená</h2></a>
 
 <p>Z pěkných citronů vymačkej šťávu, pak je rozkrájej na čtvrtky, všecko kyselé vyber, citrony vlož do čistého hrnku, nalej na ně čerstvé vody a nech je 10 dni močit; voda se však musí denně dvakrát i třikrát slejt a opět čerstvá nalejt; první tři dni se voda vždy trochu osolí. Potom nech v novém bundovém kuthánku vařit čistou vodu, vlož do ní ty vymočené citrony a nech je asi půl čtvrt hodiny vařit; pak zkoušej, jsou-li měkké, píchni totiž do nich vidličkou, a lehko-li se tato vyndá, tedy jsou dost vařeny; nyní tu vodu slej a nalej na ně studenou vodu, tuto pak zase slej, nalej na ně opět čerstvou vodu, a v té je nech asi čtvrt hodiny ležet; potom vodu sced, prostři na čtvero přeložený ubrousek a rozlož na něj ty kůrky jednu vedle druhé, aby pěkně oschly. Mezitím dej do bundového kastrolku cukru a vody dle toho, mnoho-li máš citronů, a nech to vařit, až to hezky zhoustne; nesmí to však být příliš husté, aby se to mohlo do kůrek vtáhnout; pak cukr proceď, ty oschlé kůrky urovnej do čisté sklenice, a když cukr vychladl, vlej ho na ně a nech to přes noc stát; cukru však musí býti tolik, aby ním kůrky byly zaklopeny. Druhého dne slej cukr na kastrolek, přidej k němu ještě kousek cukru a nech ho zase vařit, až zhoustne, načež ho nech vychladnout a nalej ho zase na kůrky. Tak to opakuj tři nebo čtyry dni; nech totiž cukr vždy hustěji zavařit, a když vychladl, nalej ho na kůrky. Konečně na to polož čistý omytý oblázkový kámen, obvaz sklenici papírem, napíchej do něho direk a ulož to na studené suché místo. S cukrem jest se říditi dle citronů, ku př. na kůrky s 12ti citronů počítá se půl libry cukru, a pak se po čtyřech lotech přidává; jsou-li kůrky s velkých citronů, tedy musí býti více cukru – to se nejlépe vyskoumá vlastní zkušeností. </p>
 
 <p>Na tentýž způsob zavařuje se také pomerančová kůra.</p>
 
-<a name="orechy-v-cukru-zavarene"><h2>Ořechy v cukru zavařené</h2></a>
+<a id="orechy-v-cukru-zavarene"><h2>Ořechy v cukru zavařené</h2></a>
 
 <p>Pokud velké ořechy ještě uvnitř tvrdou skořápku nemají a lehce propíchnout se dají, otrhají se se stromu, což obyčejně v měsíci červnu se stává. Propíchni každý ořech několikrát jehlou, vlož je do studené vody a nech je čtrnáct dní močit; vodu však musíš každý den slejt a čerstvou na ořechy nalejt; posléz nalej na ně měkkou vodu a nech je do měkka uvařit, což poznáš, když ořech jehlou propíchneš, do výšky jej zvedneš a on s jehly lehce dolů sjede; potom vyndej ořechy do jiné nádoby, nalej na ně studenou vodu a nech je v ni přes noc ležet. Druhého dne vyndej ořechy na čistý ubrousek a nech je trochu osáknout, pak je vlož do čisté nádoby, polej je řídce zvařeným vychladlým cukrem a nech je tak přes noc ležet. Druhého dne cukr slej, nech ho silněji zvařit, a když prochladne, nalej ho na ořechy a nech je opět přes noc v něm. Tak to opakuj po osm dní; kdyby se cukr příliš vyvářel, tedy přidej vody a cukru. Osmého dne cukr slej, nech jej do husta zvařit, vlož ořechy do něho a nech je v něm chvilku povařit, pak je odstav od ohně a nech prochladnout; načež jich vrstvu vlož do sklenice, prosyp je přelámanou skořicí a několika hřebíčky, na to dej zase ořechy, prosyp je opět skořicí a hřebíčky, a tak pokračuj až ku konci, pak ořechy polej cukrem, v němžto se vařily; kdyby však nebyly všechny ořechy pokryty, tedy musíš ještě kus cukru s trochou vody nechat do husta zvařit a na ořechy přilejt; načež sklenici obvaz papírem a uschovej. Na libru ořechů béře se libra cukru.</p>
 
-<a name="mirabelky-a-zelencata-v-cukru-zavarene"><h2>Mirabelky a zelenčata v cukru zavařené</h2></a>
+<a id="mirabelky-a-zelencata-v-cukru-zavarene"><h2>Mirabelky a zelenčata v cukru zavařené</h2></a>
 
 <p>Oboje toto ovoce musí se dorostlé sice, ale dokud ještě uvnitř nemá tvrdou pecku, se stromu otrhat, stopky do polou ustříhat, ovoce několikrát jehlou propíchnout a v měkké vodě, k nížto kousek kamence se připojí, do měkka uvařit; načež dej ovoce do studené vody a nech je v ní čtyryadvacet hodin stát, pak je vyndej na mísu. Na libru ovoce nech tři čtvrtě libry cukru se žejdlíkem vody jen řídce zvařit, opěň a vlej ho na ovoce, přikrej to papírem a nech to zase čtyryadvacet hodin stát Druhého dne cukr slej, nech ho převařit, opěň a nalej ho zase na ovoce, a nech to opět do druhého dne stát. Tak to opakuj ještě tři dni po sobě. Pátého dne nech cukr do hustá zvařit, vlož ovoce do něho, nech ho jednou převárnout, seber pěnu, načež ovoce vyndej do sklenice, cukr nech ještě trošinky povařit, a když prochladne, vlej ho na ovoce; kdyby toto nebylo docela pokryto, tedy musíš ještě trochu cukru nechat do husta zvařit a na ovoce nalejt. Teprva když to docela vychladne, sklenice náležitě obvaz a uschovej.</p>
 
