--- a/src/zmrzliny.html
+++ b/src/zmrzliny.html
@@ -1,84 +1,84 @@
 <a href="index.html" class="hlavicka"><h1>Zmrzliny</h1></a>
 
-<a name="jak-se-ma-led-pripravovat-a-zmrzlina-delat"><h2>Jak se má led připravovat a zmrzlina dělat</h2></a>
+<a id="jak-se-ma-led-pripravovat-a-zmrzlina-delat"><h2>Jak se má led připravovat a zmrzlina dělat</h2></a>
 
 <p>Led se musí v největší spěšnosti na drobno roztlouct a soli dobře promíchat, pak se dá buď do hlubokého škopička nebo k tomu cíli již schválně zřízeného vědýrka. Tekutina, z nížto zmrzlina udělati se má, vleje se do cinové, k tomu zvláště zřízené pyksly, tato se víkem pevně uzavře, postaví se do připraveného ledu, obloží se ním kolem až k víku, a zamknutou pykslou se asi čtvrt hodiny stále točí; pak se pyksla odemkne a zmrlina se míchá k tomu připravenou lžičkou. Od kraje se musí vždy to zmrzlejší do prostředka vmíchat. Na vypracování zmrzliny nejvíce záleží, proto že nesmí být hrudkovatá, nýbrž jako máslo vláčná a hladká. Zmrzliny smetanové vyžadují méně času, práce a soli do ledu, nežli jiné, zvláště takové, ku kterým vino nebo dokonce arak přijde; ty musejí vždy déle mrznout a následovně dají více práce.</p>
 
-<a name="jak-se-cukr-cisti-a-ve-vareni-postupuje"><h2>Jak se cukr čistí a ve vaření postupuje</h2></a>
+<a id="jak-se-cukr-cisti-a-ve-vareni-postupuje"><h2>Jak se cukr čistí a ve vaření postupuje</h2></a>
 
 <p>Má-li se cukr k zavařeninám a zmrzlinám upotřebit, tedy se musí vždy dříve na ohni vyčistit a rozpustit; totiž: naleje se naň více nebo méně vody, jak při každé krmi jest udáno, a nechá se rozpustit. První stupeň <i>(Grad)</i> jest, když cukr se lžíce ve velkých kapkách dolů teče; druhý stupeň, když se lžíce vyzdvihne, a cukr se jako nitka táhne, dole na nitce pak se udělá malá perlička, a když tato upadne, nitka se opět nahoru stáhne; třetí stupeň, když větší perlička se utvoříc déle na nitce viset zůstane; čtvrtý stupeň, když se do lžíce foukne, a vzadu na dirkách lžíce malé perličky se tvoří; pátý stupeň, když při takovém fouknuti perličky odlétají; šestý stupeň, když se kulaté dřívko ve vodě smočí, pak do cukru strčí, hned se ale opět vytáhne a zase spěšně do vody namočí, potom když se do dřívka kousne, toto jsouc křehké praskne a na zuby se nelepí; sedmý stupeň pak je ten, když cukr žloutnout a vůni ze sebe vydávat počíná; tenkrát jest čas, aby se vzal s ohně, protože by se snadno mohl přepálit, leda by měl býti k takové potřebě, kde musí býti do hněda upražen, jako ku př. k černé rybě, k rosolu, divokým kachnám, holubům a jiným omáčkám; v tom pádu se musí až k osmému stupni upražit, totiž až dostane pěknou granátovou barvu. Když je však cukr dost hnědý, musí se do něho hned omáčka nalejt, aby se připáleni nebo přepálení zamezilo, sice cukr zčerná a dostane trpkou, nepříjemnou chuť. K cukru musí se vždycky dát aspoň tolik vody, aby se rozpustil, a voda se musí vždycky vzít měkká, nikdy studničná.</p>
 
-<a name="zmrzlina-z-vanilie"><h2>Zmrzlina z vanilie</h2></a>
+<a id="zmrzlina-z-vanilie"><h2>Zmrzlina z vanilie</h2></a>
 
 <p>Nech vařit žejdlík dobré smetany se čtvrt librou cukru a jedním kvintlíkem na malé kousky nakrájené vanilie, pak rozkloktej šest žloutků s trochou studené smetany, vlej to do vařící smetany a míchej tím, až to zhoustne, potom to proceď skrze žíněné sejtko do nějaké nádoby, a míchej tím, až to hodně vychladne, načež to vlej do pyksly a nech to mezi ustavičným mícháním zmrznout.</p>
 
-<a name="zmrzlina-z-caje"><h2>Zmrzlina z čaje</h2></a>
+<a id="zmrzlina-z-caje"><h2>Zmrzlina z čaje</h2></a>
 
 <p>Na lot císařského čaje nalej dva žejdlíky vařící smetany a nech to čtvrt hodiny přikryté stát, pak to proceď. V jiném hrnku umíchej dvanáct žloutků s půl librou tlučeného cukru, až se to zpění, potom k tomu přilej tu čajovou smetanu a kloktej tím nad mírným ohněm, až to zhoustne; vařit se to ale nesmí; pak to proceď skrze sejtko do čisté nádoby, a míchej tím, až to úplně vystydne, načež to vlej do pyksly a dělej dle předpisu zmrzlinu.</p>
 
-<a name="zmrzlina-z-kavy"><h2>Zmrzlina z kávy</h2></a>
+<a id="zmrzlina-z-kavy"><h2>Zmrzlina z kávy</h2></a>
 
 <p>Upraž čtvrt libry pěkné kávy, pak ji ještě horkou hod do dvou žejdlíků vařící smetany, přikrej to a nech to hodinu stát. Mezitím umíchej v jiném hrnku deset žloutků se dvanácti loty tlučeného cukru, potom k tomu proceď skrze ubrousek tu smetanu z kávy, a kloktej tím nad mírným ohněm tak dlouho, až se to začíná zvedat, pak to proceď skrze sejtko a míchej tím, až to vystydne, načež to vlej do pyksly a dělej zmrzlinu.</p>
 
-<a name="zmrzlina-z-liskovych-orisku"><h2>Zmrzlina z lískových oříšků</h2></a>
+<a id="zmrzlina-z-liskovych-orisku"><h2>Zmrzlina z lískových oříšků</h2></a>
 
 <p>Opař jako mandle čtvrt libry jader z lískových oříšků, potom je oloupej a utři v pánvi s trochou smetany na hladkou kasičku, tuto pak dej do dvou žejdlíků horké smetany, aby se chuť z oříšků do ní vtáhla, a přikrej to. V jiném hladkém hrnku utři deset žloutků se dvanácti loty tlučeného cukru, potom k tomu přidej tu smetanu z oříšků, postav to na mírný oheň a kloktej tím stále, až se to začne zvedat, pak to proceď a míchej jako předešlé, až to docela vystydne, načež to vlej do pyksly a dělej dle předpisu zmrzlinu.</p>
 
 <p>Zmrzlina z mandlí upraví se tímtéž způsobem.</p>
 
-<a name="zmrzlina-z-horkych-mandli"><h2>Zmrzlina z hořkých mandli</h2></a>
+<a id="zmrzlina-z-horkych-mandli"><h2>Zmrzlina z hořkých mandli</h2></a>
 
 <p>Opař a oloupej čtyry loty kořkých a dva loty sladkých mandlí a utluč je na kasičku. Rozmíchej dvanáct žloutků s půl librou tlučeného cukru, přidej k tomu tu kasičku z mandlí, kousek vanilky, nalej na to dva žejdlíky vlažné smetany, postav to na mírný oheň a kloktej tím stále, až to začne houstnout, pak to odstav a míchej tím, až to úplně vystydne, načež to proceď skrze sejtko, vlej to do pyksly a dělej zmrzlinu na svrchu udaný způsob.</p>
 
-<a name="zmrzlina-z-kastanu"><h2>Zmrzlina z kaštanů</h2></a>
+<a id="zmrzlina-z-kastanu"><h2>Zmrzlina z kaštanů</h2></a>
 
 <p>Půl libry uvařených aneb upečených oloupaných kaštanů ustrouhej a utři na kasičku, dej je do dvou žejdlíků smetany, a míchej tím ustavičně nad ohněm, až se to začne vařit, pak to hned odstav a přidej k tomu dvanáct lotů ku třetímu stupni zvařeného učistěného cukru; potom rozkloktej v hrnečku šest žloutků s trochou studené smetany, nalej na ně tu kaštanovou zvařeninu a ještě to na ohni hodně kloktej, pak to proceď skrze sejtko, vlej to do pyksly a dělej zmrzlinu.</p>
 
-<a name="zmrzlina-cokoladova"><h2>Zmrzlina čokoládová</h2></a>
+<a id="zmrzlina-cokoladova"><h2>Zmrzlina čokoládová</h2></a>
 
 <p>Nech zvařit dva žejdlíky dobré smetany, dej do ní šest tabulek strouhané čokolády, osm lotů cukru, Čtvrt kvintlíku vanilie, a nech to při ustavičném míchání povařit; pak rozkloktej osm žloutků asi se třemi lžičkami studené smetany, vlej na to tu vařící čokoládu a kloktej tím, až to vystydne, načež to proceď skrze husté žíněné sejtko, vlej to do pyksly a dělej zmrzlinu.</p>
 
-<a name="zmrzlina-z-paleneho-cukru"><h2>Zmrzlina z páleného cukru</h2></a>
+<a id="zmrzlina-z-paleneho-cukru"><h2>Zmrzlina z páleného cukru</h2></a>
 
 <p>Nech na rendlíčku čtvrt libry cukru s půl žejdlíkem vody do hnědá, totiž až k sedmému stupni uvařit, potom k němu zčerstva přilej půl žejdlíka vody a míchej tím, až to zhoustne. Rozmíchej v hrnku dvanáct žloutků se čtvrt librou cukru, nalej na to dva žejdlíky smetany, postav to na oheň a kloktej tím stále, až to začne houstnout, pak to odstav, přidej k tomu ten pálený cukr a míchej tím opět, až to vystydne; načež to proceď jako předešlé, vlej to do pyksly a dělej zmrzlinu.</p>
 
-<a name="zmrzlina-z-jahod"><h2>Zmrzlina z jahod</h2></a>
+<a id="zmrzlina-z-jahod"><h2>Zmrzlina z jahod</h2></a>
 
 <p>Rozmačkej zralé jahody a proceď je skrze žíněné sejtko. Na žejdlík jahodové šťávy nech dvanáct lotů cukru s koflíčkem vody tak dlouho vařit, až se opění, pak do něho naceď šťávu z jednoho citronu, dej k tomu též s jednoho citronu na čtvrt libře cukru ostrouhanou kůru a nech to mezi ustavičným mícháním docela vychladnout; potom dej k tomu ty procezené jahody, hodně to promíchej, dej to do pyksly, tuto postav do ledu a dělej zmrzlinu.</p>
 
-<a name="jahodova-zmrzlina-se-smetanou"><h2>Jahodová zmrzlina se smetanou</h2></a>
+<a id="jahodova-zmrzlina-se-smetanou"><h2>Jahodová zmrzlina se smetanou</h2></a>
 
 <p>Rozmačkej a proceď na předešlý způsob pěkné lesní jahody. Na žejdlík šťávy utluč libru cukru, pak dej oboje do hladké hluboké nádoby a míchej tím dobré půl hodiny; načež k tomu znenáhla a mezi ustavičným mícháním přilej žejdlík husté syrové smetany, vlej to do pyksly a dělej dle předpisu zmrzlinu.</p>
 
-<a name="zmrzlina-z-visni"><h2>Zmrzlina z višní</h2></a>
+<a id="zmrzlina-z-visni"><h2>Zmrzlina z višní</h2></a>
 
 <p>Utluč v moždíři pěkné španělské višně i s peckami, dej je do čisté nádobky a nech je přes noc nebo aspoň několik hodin stát, aby od pecek lepší chuť dostaly. Na žejdlík takovéto procezené štávy nech 12 lotů cukru s koflíčkem vody hezky povařit, až se začne táhnout, potom k němu dej tu višňovou šťávu, dobře to promíchej a nech to vystydnout, pak to vlej do pyksly a dělej zmrzlinu. Chceš-li, můžeš k tomu též dát s jednoho citronu na cukru ostrouhanou kůru i šťávu z téhož citronu do toho vymačkat, pak se ale musí přidat 4 loty cukru. Také se k tomu může přidat trochu drobnince tlučené a skrze husté žíněné sejtko prosáté skořice.</p>
 
-<a name="zmrzlina-z-malin"><h2>Zmrzlina z malin</h2></a>
+<a id="zmrzlina-z-malin"><h2>Zmrzlina z malin</h2></a>
 
 <p>Rozmačkej a protlač skrze sejtko tolik pěkných čerstvých malin, abysi vydobila dva žejdlíky šťávy. Nech tři čtvrtě libry na jednom citronu otřeného cukru s půl žejdlíkem vody do husta zvařit, pak ho odstav, dej k němu tu malinovou šťávu a přiceď k tomu též šťávu z toho citronu, dej však pozor, aby do toho nepřišly žádné jádra, a míchej tím, až to vystydne, načež to dej do pyksly a dělej zmrzlinu.</p>
 
-<a name="zmrzlina-z-rybizu"><h2>Zmrzlina z rybízu</h2></a>
+<a id="zmrzlina-z-rybizu"><h2>Zmrzlina z rybízu</h2></a>
 
 <p>Rozmačkej a proceď několik žejdlíků pěkných otrhaných rybízových zrnek; načež zmrzlinu uprav zcela tak jako předešlou, jen že na dva žejdlíky šťávy musíš přidati čtyry loty cukru.</p>
 
-<a name="zmrzlina-z-citronu"><h2>Zmrzlina z citronu</h2></a>
+<a id="zmrzlina-z-citronu"><h2>Zmrzlina z citronu</h2></a>
 
 <p>Na půl libře cukru ostrouhej kůru se dvanácti citronů, šťávu z těch citronů proceď skrze čistý šat nebo husté žíněné sejtko do čisté nádobky, cukr nech se dvěma kávovýma koflíčkama vody vařit, až se opění, a když trochu prochladne, smíchej ho s tou citronovou šťávou, pak všecko ještě jednou skrze žíněné sejtko proceď, vlej to do pyksly a dělej zmrzlinu.</p>
 
-<a name="zmrzlina-z-pomerancu"><h2>Zmrzlina z pomerančů</h2></a>
+<a id="zmrzlina-z-pomerancu"><h2>Zmrzlina z pomerančů</h2></a>
 
 <p>Oloupej kůru se čtyr pomerančů a nech ji přes noc v žejdlíku vody močit k potom tu vodu nalej na dvacet lotů drobně nasekaného cukru a nech ho zvařit, až se táhne, pak ho odstav, a když trochu prochladne, přimíchej k němu z těch čtyr pomerančů procezenou šťávu a sklenku šampaňského vína, a míchej tím, až to docela vystydne, načež to vlej do pyksly a dělej zmrzlinu.</p>
 
-<a name="zmrzlina-ananasova"><h2>Zmrzlina ananasová</h2></a>
+<a id="zmrzlina-ananasova"><h2>Zmrzlina ananasová</h2></a>
 
 <p>Oloupej, a rozstrouhej jeden pěkný ananas, přidej k němu čtvrt libry tlučeného cukru a několik lžiček vody, utři to pospolu a nech to přikryté stát. Nech libru cukru s půl žejdlíkem vody zvařit, až se táhne, potom k němu přiceď šťávu z jednoho citronu, odstav to od ohně, a když to trochu prochladne, přimíchej to k ananasu, proceď to a míchej tím, až to vystydne, pak to vlej do pyksly a dělej zmrzlinu.</p>
 
-<a name="zmrzlina-z-punce"><h2>Zmrzlina z punče</h2></a>
+<a id="zmrzlina-z-punce"><h2>Zmrzlina z punče</h2></a>
 
 <p>Ostrouhej na cukru kůru s jednoho pomeranče a se dvou citronů, dej to do čisté nádobky a nalej na to koflíček vody, aby se to rozmočilo, potom do toho naceď šťávu ze šesti citronů a z toho pomeranče, dobře to promíchej, nech zvařit 12 lotů cukru jako při předešlých zmrzlinách, až se táhne, pak to smíchej dohromady, proceď to skrze servít do pyksly, a když to dáš k ledu, vlej do toho znenáhla mezi ustavičným mícháním koflíček dobrého rumu, a míchej tím tak dlouho, až to veskrz zmrzne.</p>
 
-<a name="zmrzlina-s-maraskynem"><h2>Zmrzlina s maraskýnem</h2></a>
+<a id="zmrzlina-s-maraskynem"><h2>Zmrzlina s maraskýnem</h2></a>
 
 <p>Umíchej v hrnku 10 žloutků s půl librou tlučeného cukru, nalej na to dva žejdlíky smetany a dobře to rozkloktej, potom to postav na oheň a kloktej tím stále, až se to začne zvedat a houstnout, pak to odstav a míchej tím, až to vychladne; načež k tomu přimíchej tolik maraskýnového likéru, jak to dle vlastní chuti silné nebo lahodné míti chceš, ještě to hodně promíchej, až to docela vystydne, pak to vlej do pyksly a dělej zmrzlinu. – Místo maraskýnu můžeš dáti jakýkoli jiný likér, pak se zmrzlina dle toho nazývá. Toto uvádí se pro uspoření stálého opakování.</p>
 
