--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -1,6 +1,6 @@
 <a href="index.html" class="hlavicka"><h1>Dodatek</h1></a>
 
-<a name="jak-se-delaji-jaternice-jelita-a-klobasy"><h2>Jak se dělají jaternice, jelita a klobásy</h2></a>
+<a id="jak-se-delaji-jaternice-jelita-a-klobasy"><h2>Jak se dělají jaternice, jelita a klobásy</h2></a>
 
 <p>Když se doma prasátko zabije, mívá domácí paní hlavní zřetel na jaternice. Obyčejně se bere do domu řezník, aby vepře zabil, jaternice udělal atd. Avšak tento neumí vždycky také i s drobem dobře zacházet, pročež uvedu zde o tom následující pojednání.</p>
 
@@ -10,11 +10,11 @@
 
 <p><b>Klobásy</b>. Na tyto se obyčejně bere krátké maso s krku, čemu řezník nejlépe rozumí, kde ho má vyříznout. To se drobně useká, přimíchá se k němu trochu v pivě nebo ve víně máčené žemličky, ale ne mnoho (tak asi aby byly tři díly masa a jeden díl žemličky), dá se k tomu trochu květu, trochu hřebíčku, citronové kůry, osolí se to patřičně, pak se přileje trochu piva nebo vína, dobře se to promíchá a nabije se to do skopových střívek. – Tyto klobásy se schovají syrové, a pak se buď vaří nebo pečou. Čím méně žemličky, tím jsou lepší.</p>
 
-<a name="jak-se-maso-k-uzeni-naklada"><h2>Jak se maso k uzení nakládá</h2></a>
+<a id="jak-se-maso-k-uzeni-naklada"><h2>Jak se maso k uzení nakládá</h2></a>
 
 <p>Na libru soli vezme se lot salitru a tím se maso, které se dříve nesmí máčet, nasolí, dobře do dřevěné nádoby uloží, prkénkem přikreje a kamenem přimáčkne. Takto nasolené maso musí aspoň čtrnáct dní ležet a častěji se přeložit, aby sůl všude stejně se protáhla, načež se maso dá do komína. Kdo je milovník česneku, může několik stroužků se solí utřít a maso tím natřít. – Také se k uzení nasoluje hovězí i jelení jazyk, a musí osm dní ležet, nežli se dá do komína.</p>
 
-<a name="jak-se-maslo-naklada-soli-a-prevaruje"><h2>Jak se máslo nakládá, solí a převařuje</h2></a>
+<a id="jak-se-maslo-naklada-soli-a-prevaruje"><h2>Jak se máslo nakládá, solí a převařuje</h2></a>
 
 <p>Nové máslo se ke všem jídlám nehodí, aniž je všude v každém ročním počasí k dostání; protož jest zapotřebí, aby každá hospodyně, kde to může býti, zvláště na zimu slaným a přepouštěným máslem se zaopatřila.</p>
 
@@ -24,53 +24,53 @@
 
 <p>Máslo nové, slané i převařené jest nejlépe vždycky na takových místech schovat, kde jest chladno a sucho, a kde není žádný puch, protože máslo každou chuť rádo přijímá a tím porušení béře a stává se nechutným.</p>
 
-<a name="jak-se-maji-vejce-ukladat-aby-se-nepokazily"><h2>Jak se mají vejce ukládat, aby se nepokazily</h2></a>
+<a id="jak-se-maji-vejce-ukladat-aby-se-nepokazily"><h2>Jak se mají vejce ukládat, aby se nepokazily</h2></a>
 
 <p>Vejce se nejlépe ukládají, když se do dlouhého prkna nechají udělat samé díry, a do těch se vejce pěkně jedno vedle druhého urovnají, tak aby se jedno druhého nedotýkalo; prkno však musí býti v takovém místě, kam ani teplo ani mráz nemůže, protože by tam vejce zmrzly. Kdo ale takové prkno nemá, může vejce na zimu ukládat buď do hrachu anebo do popele, totiž: dá se vrstva popele, do něho se nastrká vajec tak, aby se jedno druhého nedotýkalo, pak se nasype zase asi na půl čtvrtky popele, do toho se opět nastrkají vejce, a tak se pokračuje dále. Nejdéle se udrží vejce zdravé, když se nakladou v kadečku do hašeného řídkého vápna; v tomto pohrouženy vydržejí třebas rok. Také se mohou vejce v zahoustlém vápně omočit, tak sice, aby skořápku nebylo vidět, pak se nechají oschnout a buď se nastrkají do popele anebo se v chladném místě rozloží.</p>
 
-<a name="jak-se-zmrzle-vejce-nebo-jablka-zase-napravi"><h2>Jak se zmrzlé vejce nebo jablka zase napraví</h2></a>
+<a id="jak-se-zmrzle-vejce-nebo-jablka-zase-napravi"><h2>Jak se zmrzlé vejce nebo jablka zase napraví</h2></a>
 
 <p>Když jsou vejce od mrazu roztrhnuté, nebo jablka zmrzlé, musejí se dříve než přijdou do tepla hodit do hodně studené vody, pak se teprve dají do teplé světnice, tak z nich mráz znenáhla vyjde. Když již půl hodiny ve studené vodě leží, neškodí ji slejt a zase čerstvou studenou nalejt. Tak vejce rozmrzne a nezvodnatí, aniž jablko změkne, což by se jistě stalo, kdyby se hned do tepla dalo.</p>
 
-<a name="jak-se-dela-rejzova-mouka-a-krupice"><h2>Jak se dělá rejžová mouka a krupice</h2></a>
+<a id="jak-se-dela-rejzova-mouka-a-krupice"><h2>Jak se dělá rejžová mouka a krupice</h2></a>
 
 <p>Dej do hrnku půl libry pěkné přebrané karolinské rejže, nalej na ni studené vody, zamíchej ní, pak vodu slej a zase na ni nalej studené vody, a nech ji v ní půl hodiny stát; potom rejži vařečkou dobře promíchej, vodu slej, a nalej na ni třikráte vařící vodu, která se vždy po zamíchání sleje, po čtvrté však se nechá rejže v té vařící vodě opět půl hodiny stát; načež se voda sleje, rejže položí se na papír a nechá se hodně usušit, nejdříve jen na teplém povětří, pak na teplém místě. Když jest rejže dost suchá, utluče se v moždíři na moučku, potom se skrze žíněné sejtko proseje.</p>
 
 <p>Co zůstane v sejtku, jest pěkná krupice; co propadne, jest mouka. Oboje se dá do skleněných nádob a schová se v suchém místě. Tato moučka i krupice může se potřebovat k rozličným v této knize uvedeným věcem, a bylo by pozdě, teprv když se potřebuje, ji připravovat; pročež radno, aby jak mouka tak krupice tato vždy v zásobě byla, a když dochází, v příhodném čase opět se udělala.</p>
 
-<a name="jak-se-dela-jecna-mouka"><h2>Jak se dělá ječná mouka</h2></a>
+<a id="jak-se-dela-jecna-mouka"><h2>Jak se dělá ječná mouka</h2></a>
 
 <p>Časem jest zapotřebí nakvap koflíček krupovky <i>(Gerstel)</i>. Než by se kroupy uvařily, ušlo by mnoho času; pročež je záhodno, aby se také ječná mouka v zásobě držela, ne sice mnoho, ale vždy tolik, co by se náhodou mohlo potřebovat.</p>
 
 <p>Utluč aspoň půl libry perlových krup a prosej je skrze žíněné sejtko; co zůstane v sejtku, opět utluč a prosej. Tak vyzískáš pěknou mouku; tu dej do sklenice, obvaz ji papírem, tento malým špendlíkem propíchej, a ulož to na suché místo. – Lžíci této mouky na žejdlík polívky zavařit, kouskem másla, jedním žloutkem a trochou květu ji připravit, poskytne za půl hodiny výbornou krupovku, kdežto by, než by se kroupy uvařily, dvě hodiny minuly. – Také se může rejžové mouky na krupovku použit.</p>
 
-<a name="jak-se-da-zeleny-hrasek-na-zimu-zachovat"><h2>Jak se dá zelený hrášek na zimu zachovat</h2></a>
+<a id="jak-se-da-zeleny-hrasek-na-zimu-zachovat"><h2>Jak se dá zelený hrášek na zimu zachovat</h2></a>
 
 <p>Když jsou lusky ještě mladé, tedy se z nich hrášek vyloupá a nechá se dříve na povětří osušit, pak se do tvrda na teplém místě dosuši, dá se buď do čistých nádob, tyto se obvážou papírem, který se propíchá, anebo se dá do pytlíčku z řídkého plátna a uloží se na suché místo. Když je ho v zimě potřeba, tedy se den předtím namočí a pak se jako čerstvý zelený hrášek připravuje.</p>
 
-<a name="jak-se-maji-houby-susit"><h2>Jak se mají houby sušit</h2></a>
+<a id="jak-se-maji-houby-susit"><h2>Jak se mají houby sušit</h2></a>
 
 <p>Při kupování hub jest zvláštní opatrnosti potřebí, aby se mezi zdravé houby nějaká nezdravá nepřimíchala. Na jaře jsou nejprynějši houby smrže; tyto jsou čím menší tím lepší, protož radno koupit ty nejmenší, a když se od písku jak náleží očistily, navlečou se na nitky a nechají se na čerstvém povětří osušit; ty větší však rozkrájej na malé věnečky, nech je osušit, pak je dej do sklenic nebo do pytlíčku z řídkého plátna a schovej je na takové místo, kde provívá suché povětří. Takto rozkrájené smrže jsou ouhledné a hodí se k zadělávaným jídlům, jakož i k rozličným míšeninkám <i>(Ragout)</i>. Také dobře, když dříve než je rozkrájíš, kořínek uřízneš, houby v čisté studené vodě přemeješ, pak je necháš na sejtku osáknout, načež je rozkrájíš a usušíš. – Též hříbky je lépe malé než velké kupovat; předně hodí se pouze malé sušené k zadělávaným jídlům, a za druhé jsou spíše všeho hmyzu prázdné. Když tedy malé hříbky koupíš, odděl hlavičky od kořínků a co možná tenince je rozkrájej; dávej však bedlivý pozor, aby se žádná červivá, která by dost malou dirku měla, mezi ostatní nepřimíchala, sice by se pak snadno všecky porušily. Když jsou hlavičky rozkrájeny, rozlož je řídce na papír a dej je na takové místo, kde vane čerstvý vzduch a slunce svítí, a častěji nimi míchej, aby spěšně schly a nezčernaly; když jsou suché, dej je i s papírem ještě na teplé místo, buď na prochladlou plotnu, nebo do vychladlé trouby, anebo také na ohniště, když se oheň odmete, aby zkřehly, pak je jako smrže ulož. Kořínky též oloupej, tenince rozkrájej a nech je tak jako hlavičky sušit. Při těch se mohou trochu větší hlavičky sušit a pospolu s kořínky uschovat. Tyto se hodí na polívky, svítky a k podobným věcem. I při těch se musí na to pilně hledět, aby se mezi ně žádná červivá nepřímíchala; protož je to zcela chybné, když se celé hlavičky na nitě navlékají a tak sušit nechají, neboť celé zčerviví, a krom toho že se zoškliví, časem také zcela spráchniví a nejsou k potřebě. – Mimo hříbky se také suší lanýže a žampiony, oboje se však musí dříve oloupat, pak tetince rozkrájet, ostatně tak jako hříbky sušit a uložit.</p>
 
-<a name="jak-se-zeli-naklada"><h2>Jak se zelí nakládá</h2></a>
+<a id="jak-se-zeli-naklada"><h2>Jak se zelí nakládá</h2></a>
 
 <p>Nejdříve si připrav soudek buď od vína neb od octa, anebo jinou nádobu z tvrdého dříví, ale aby nebyla rozeschlá, ješto by šťáva ven prýštila a zelí se lehce zkazilo. S kopy pěkných velkých zelných hlávek ober vrchní ovadlé lupení, vyřízni košťály a zelí rozkrouhej na kružadle na prostřený čistý ubrus, načež k němu přidej půl druhé libry soli, půl žejdlíka kmínu, a rukama ho náležitě promíchej. Nyní poklad dno nádoby čistým zelným lupením, dej do ní vrstvu skrouhaného zelí a dřevěnou, k tomu účeli zhotovenou palici ho všude stejně stluč pak dej opět vrstvu zelí, zase ho stluč, a tak pokračuj, až je všecko zelí v nádobě, potom ho ještě se všech stran upěchuj, povrchu ho poklaď čistým zelným lupením, přikrej ho bílým čistým plátnem, na to polož kulaté víčko a toto obtíži velkým omytým kamenem. Nyní postav nádobu do teplého místa a nech ji tam, aniž bysi ní dosti málo hnula, stati tak dlouho, až zelí vykysá, což se asi ve čtrnácti dnech stane; potom vykysanou pěnu čistým šatem seber, nádobu kolem kraje utři a očisti a postav ji do studeného místa. Když chceš zelí k vaření bráti, tedy ho vždy tolik co potřebuješ s vrchu stejně seber, aby zůstalo v rovnosti, pak ho zase víčkem přikrej a kamenem obtíži. Kdyby osychalo, přilej naň vždy trochu studené osolené vody.</p>
 
-<a name="jak-se-povidla-vareji"><h2>Jak se povidla vařejí</h2></a>
+<a id="jak-se-povidla-vareji"><h2>Jak se povidla vařejí</h2></a>
 
 <p>Vaření povidel nevyžaduje právě velkého uměni, za to ale tím větší pozornosti a bedlivosti, aby předně patřičně tuhé byly a za druhé aby se nepřipálily, což zvláště při dovařování velmi lehce stati se může, jestliže kuchařka, trochu obtížným mícháním tuhých již povidel unavena, chce si pohovět a v míchání ustane.</p>
 
 <p>Z pěkných zralých švestek vyloupej pecky, a švestky dej do čistého měděného kotle, pod nímž mírný oheň stále udržovat a rozvařujícími-se švestkami míchat musíš. Švestky, které se do kotle nevejdou, dej do velkých rendlíků a hrnků, a nech je na plotně rozvářet; jakmile však se v kotli švestky svářejí, tedy přidávej k nim švestky z hrnků a rendlíků, až jsou všechny v kotli; nyní ale musíš zavářku tak zvaným trdélkem aneb kopisti bez ustání tak dlouho míchat, až se svaří v hodně tuhá povidla. Když povidla syčejí a kopisť nebo trdélko v prostřed kotli stát zůstane, aniž by se na stranu klonilo, je to důkazem, že povidla jsou dostatečně uvařená; nyní je vyndej do hrnků a nech je docela vychladnout, pak hrnky obvaz papírem a ulož je do studeného místa.</p>
 
-<a name="jak-se-pripalena-smetana-opet-napravi"><h2>Jak se připálená smetana opět napraví</h2></a>
+<a id="jak-se-pripalena-smetana-opet-napravi"><h2>Jak se připálená smetana opět napraví</h2></a>
 
 <p>Když se v hrnku smetana připálí, což se lehce stane, vaří-li se smetana při ohni, tedy se hrnek zevnitř namaže lojovou svíčkou na tom místě, kde je smetana nejvíce připálená, a přistaví se zase k ohni; tak připálenina z většího dílu zmizí. Nebo se vodní konévka namočí ve studené vodě a poklopí se na hrnek, čímž se též, nepříjemná chuť vytáhne. Připálení může se však předejít, když smetanu na plotně vaříme.</p>
 
-<a name="rychly-prostredek-kdyz-se-kucharka-spali-neb-opari"><h2>Rychlý prostředek, když se kuchařka spálí neb opaří</h2></a>
+<a id="rychly-prostredek-kdyz-se-kucharka-spali-neb-opari"><h2>Rychlý prostředek, když se kuchařka spálí neb opaří</h2></a>
 
 <p>Když se kuchařka spálí neb opaří, bez čeho se snad žádná vařit nenaučí, ať honem vejce roztluče a mázdrou, která jest ve skořápce, spálené neb opařené místo obloži, a když to přischne, nechť to pořád maže bílkem. To vytáhne horkost a neudělá se žádný puchýř; nesmí se ale spálené místo dříve namočit, dokud horkost nezmizela. Také se radí strouhaná zemčátka nebo rychlé obložení bavlnou; co jest nejdříve při ruce, toho ať se použije. Jestli se ale kuchařka silně spálila o plech aneb o železo, tedy jest nejlépe lékaře povolat; není-li však lékař hned po ruce, tedy nechť se rána obkládá v klejtovém octě a ve vodě máčenými klocy, a je-li rána zjitřena, musí se hojit klejtovou masti.</p>
 
-<a name="jak-se-mejdlovy-a-kafrovy-lih-pro-domaci-potreba-pripravuje"><h2>Jak se mejdlový a kafrový líh pro domácí potřeba připravuje</h2></a>
+<a id="jak-se-mejdlovy-a-kafrovy-lih-pro-domaci-potreba-pripravuje"><h2>Jak se mejdlový a kafrový líh pro domácí potřeba připravuje</h2></a>
 
 <p>Když se v kuchyni někdo buď uhodí, řízne, uskřípne, sekne neb jinak raní, jest ovšem lehká pomoc, kde jest lékař a lékárna v místě, neboť se může lékař hned povolat a prostředků od něho předepsaných užívat. Jelikož ale tato kniha nejen pro města, ale i pro lid venkovský a pro osamělá místa, ku př. fary, myslivárny atd. psána jest, pročež stůj zde pro ty, kteří, když se někdo na svrchu dotčený způsob poraní, teprv kolik hodin cesty konati musejí, než lékaře a lékárnu dostihnou, následující domácí prostředek. Když se tedy někdo, jak svrchu uvedeno, poraní, musí se rána nejprve ve studené vodě dobře vyčistit a vymočit, pak se obváže v mejdlovém nebo kafrovém líhu omočeným klůckem a tímž lihem se povrchu máčí. Není-li rána příliš nebezpečná,: vyhojí se tím.</p>
 
@@ -82,7 +82,7 @@
 
 <p>Těchto domácích prostředků se však jen tak dlouho užívá, pokud není možná s lékařem se poradit a z lékárny potřebných léků dosáhnout.</p>
 
-<a name="kterak-se-pri-mensich-i-vetsich-hostinach-tabule-upravovati-maji"><h2>Kterak se při menších i větších hostinách tabule upravovati mají</h2></a>
+<a id="kterak-se-pri-mensich-i-vetsich-hostinach-tabule-upravovati-maji"><h2>Kterak se při menších i větších hostinách tabule upravovati mají</h2></a>
 
 <p>Kniha tato, jsouc původně toliko pro menší domácí hospodářství určena, dospěla mnohými doplňky po tolika vydáních na takový stupeň, že nyní též velkým hospodářstvím ano i vrchnostenským kuchyním vyhověti může. Aby však mladé hospodyňky nebo méně zkušené kuchařky v upravování tabul nepochybily, a snad buď samé sladké, nebo samé kyselé pokrmy, anebo moučná jídla napřed a zeleninu naposledy nedaly, uvedeno jest doleji několik příkladů, kolik jídel při menších i větších tabulích přísluší, a kterak se volit a po sobě nosit mají.</p>
 
@@ -112,7 +112,7 @@
 
 <p>Poslední dva příklady hodí se jen při svatbách, poutech, posvíceních a duchovních instalacích. Změna může se udělat dle toho, co jest právě k dostání; jen na to se musí zvláště hledět, aby to co se připraví, bylo čistě, chutně a ouhledně připraveno – raději méně a dobře, než mnoho a nechutně.</p>
 
-<a name="jak-se-ma-v-postni-dni-tabule-zridit"><h2>Jak se má v postní dni tabule zřídit</h2></a>
+<a id="jak-se-ma-v-postni-dni-tabule-zridit"><h2>Jak se má v postní dni tabule zřídit</h2></a>
 
 <p>Příklad první.</p>
 
