--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -1,86 +1,86 @@
 <a href="index.html" class="hlavicka"><h1>Kompoty</h1></a>
 
-<a name="kompot-z-cerstvych-visni"><h2>Kompot z čerstvých višní</h2></a>
+<a id="kompot-z-cerstvych-visni"><h2>Kompot z čerstvých višní</h2></a>
 
 <p>Nech na rendlíku v půl žejdlíku vody vařit čtvrt libry cukru s kouskem skořice, pak do toho vlož asi dva-žejdlíky omytých višni a nech je přikryté zvolna trochu povařit, potom je vyndej na misku, šťávu nech ještě povařit a pak ji vlej na višně. – Třešňový* kompot připravuje se na týž způsob, jen že se dá o polovic méně cukru.</p>
 
-<a name="kompot-z-jahod"><h2>Kompot z jahod</h2></a>
+<a id="kompot-z-jahod"><h2>Kompot z jahod</h2></a>
 
 <p>Nech na rendlíku ve čtvrt žejdlíku vína zvařit šest lotů cukru, a když to počíná houstnou dej do toho žejdlík přebraných pěkných lesních jahod, zatřes jimi zlehka, aby se všechny potopily, nech jen var přes ně přejít a vyklop je na misku.</p>
 
-<a name="kompot-z-malin"><h2>Kompot z malin</h2></a>
+<a id="kompot-z-malin"><h2>Kompot z malin</h2></a>
 
 <p>Připravuje se jako kompot z jahod; také se může jeden díl malin a jeden díl jahod spolu smíchat, je to pikantnější.</p>
 
-<a name="kompot-z-angrestu"><h2>Kompot z angreštu</h2></a>
+<a id="kompot-z-angrestu"><h2>Kompot z angreštu</h2></a>
 
 <p>Ober čistě asi žejdlík ještě hodně tvrdého angreštu a dej ho do studené vody; nech na rendlíčku zvařit asi šest lotů cukru s trochou vody, načež angrešt cedníkem z vody. vyber, dej ho do cukru,. potřásej ním a nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
 
-<a name="kompot-z-merunek"><h2>Kompot z meruněk</h2></a>
+<a id="kompot-z-merunek"><h2>Kompot z meruněk</h2></a>
 
 <p>Oloupej dvanáct zralých sice, ale ještě tvrdých meruněk, rozpůli je, pecky vyndej, meruňky polož jednu vedle druhé do čistého kuthánku, přidej k nim čtvrt libry tlučeného cukru, koflíček vody, přikrej je a nech je zlehounka dusit, až změknou; potom je vyndej na misku, do šťávy přidej z roztlučených pecek vyndané a v moždíři utlučené jádra, nech to ještě zvařit a pak meruňky tím polej. Jádrami nabydou meruňky zvláštní chuti.</p>
 
-<a name="kompot-z-broskvi"><h2>Kompot z broskvi</h2></a>
+<a id="kompot-z-broskvi"><h2>Kompot z broskvi</h2></a>
 
 <p>Deset ne příliš měkkých broskví vlož na minutu do horké vody, pak je oloupej, rozkroj na půlky a vlož je do čistého rendlíku, v němž jsi byla čtvrt libry cukru s půl žejdlíkem vina rozpustit nechala, přidej k nim na nudličky nakrájenou citronovou kůru a nech je přikryté zpovolna dusit; když jsou dost měkké, vyndej je opatrně na kompotní misku a polej je šťávou, do které, je-li příliš hustá, můžeš přilejt trochu vody.</p>
 
-<a name="kompot-z-mirabelek"><h2>Kompot z mirabelek</h2></a>
+<a id="kompot-z-mirabelek"><h2>Kompot z mirabelek</h2></a>
 
 <p>Nech zvařit šest lotů cukru se čtvrt žejdlíkem vody, vlož do toho očištěné, ne přezralé mirabelky a nech je chvilku zpovolna vařit, pak je vyndej na misku, šťávu nech ještě povařit a vlej ji na ně.</p>
 
-<a name="kompot-z-misenskych-jablek"><h2>Kompot z míšeňských jablek</h2></a>
+<a id="kompot-z-misenskych-jablek"><h2>Kompot z míšeňských jablek</h2></a>
 
 <p>Oloupej míšeňská jablka, šťopičky pěkně vykroj a zachovej, ohryzky vydlabej, a jablka vlož do studené vody, aby zůstala bílá; pak dej do čisté vyklejtované nebo mosazné nádobky vodu a cukr, a když se to začne vařit, vlož do toho ta jablíčka a nech je povařit, ne však tuze dlouho, aby se nepřevařila a nerozpadla; načež jablíčka pozorně vyndej, na mísu vyrovnej a naceď na ně citronové šťávy, aby zůstala pěkná bílá; do omáčky dej citronovou kůru, celý hřebíček a skořici, a nech to ještě chvíli povařit; pak to skrze čistý šat proceď a nalej to do jablíček, přiklop na ně ty vykrojené šťopičky a pěkně je okrášli rozkrájenou citronovou nebo pomerančovou kůrou. Okolek můžeš udělat ze zavařených višní, a když to vystydne, posyp to cukrem a dej to na stůl.</p>
 
-<a name="jiny-kompot-z-misenskych-jablek"><h2>Jiný kompot z míšeňských jablek</h2></a>
+<a id="jiny-kompot-z-misenskych-jablek"><h2>Jiný kompot z míšeňských jablek</h2></a>
 
 <p>Oloupej míšeňských jablek, mnoho-li kompotu míti chceš, skrouhej je na kružátku a nech je na rendlíčku mezi ustavičným mícháním s cukrem hodně rozvařit; potom je vyndej na misku, nech je prochladnout, posyp je hodně povrchu cukrem, dej rozpálit malinkou lopatičku a cukr povrchu přepaluj, aby to bylo jako led, pak dej okolo višně a nes to na stůl. Nesmí se to nechat stát, sice by cukr zvlhnul.</p>
 
-<a name="kompot-z-cerstvych-jablek"><h2>Kompot z čerstvých jablek</h2></a>
+<a id="kompot-z-cerstvych-jablek"><h2>Kompot z čerstvých jablek</h2></a>
 
 <p>Oloupej 12 pěkných míšeňských jablek a vlož je do studené vody, aby nezčernaly, pak je nakrájej na koláčky, ohryzky vypíchej plechovou formičkou, koláčky urovnej na kompotní misku, vytlač na ně skrze dírkovanou lžíci šťávu z jednoho citronu, posyp je cukrem, na kterém jsi kůru s téhož citronu byla ostrouhala, a polej je punčovinou; pro lepší ouhlednost poklad vrchní koláčky zavařenými višněmi.</p>
 
-<a name="kompot-z-hrusek"><h2>Kompot z hrušek</h2></a>
+<a id="kompot-z-hrusek"><h2>Kompot z hrušek</h2></a>
 
 <p>Oloupej pěkně 9 nebo 10 hrušek a vlož je do studené vody, aby nezčervenaly; dej asi do dvou žejdlíků vody čtvrt libry cukru, kus celé skořice, kůru s jednoho citronu, a když se to začne vařit, vlož hrušky do toho, přikrej je a nech je vařit, až jsou měkke; potom hrušky vyndej, omáčku nech ještě chvíli vařit, pak ji proceď na hrušky, nech to vystydnout a dej to na stůl. Nebo rozkrájej hrušky na půlky a nech je jako prvé vařit, pak je vyndej, do omáčky dej ještě čtvrt libry cukru a nech to tak dlouho vařit, až se cukr táhne; potom hrušky do melounové formy pěkně vyrovnej, omáčku na ně proceď a nech to stydnout; pak to vyklop, okrášli kolem nějakým listím a nes to na stůl.</p>
 
-<a name="kompot-z-cerstvych-svestek"><h2>Kompot z čerstvých švestek</h2></a>
+<a id="kompot-z-cerstvych-svestek"><h2>Kompot z čerstvých švestek</h2></a>
 
 <p>Nech na rendlíku rozpustit šest lotů cukru v půl žejdlíku červeného vína, vlož do toho asi třicet pěkných švestek, přidej trochu skořice a nech je přikryté zpovolna dusit, dej však pozor, aby zůstaly celé; pak je vyndej, polej šťávou a nech vystydnout.</p>
 
-<a name="jiny-kompot-z-cerstvych-svestek"><h2>Jiný kompot z čerstvých švestek</h2></a>
+<a id="jiny-kompot-z-cerstvych-svestek"><h2>Jiný kompot z čerstvých švestek</h2></a>
 
 <p>Na zralé švestky naleje horkou vodu, stáhni s nich slupku, dej je na rendlík, přidej k nim kus cukru, trochu rakouského vina, a nech je zpovolna několik minut dusit, pak je urovnej do vršku na kompotní misku a posyp je cukrem a nakrájenou citronovou kůrou.</p>
 
-<a name="kompot-ze-suchych-svestek-a-ze-sipku"><h2>Kompot ze suchých švestek a ze šípků</h2></a>
+<a id="kompot-ze-suchych-svestek-a-ze-sipku"><h2>Kompot ze suchých švestek a ze šípků</h2></a>
 
 <p>Uvař v pivě suché švestky s několika hřebičkami, kouskem celé skořice a citronové kůry; zároveň uvař ve víně suché šípky, a dej k nim tytéž věci jako ke švestkám, a mimo to kus cukru. Když jest oboje uvařeno, tedy. pěkně rovnej vždy vrstvu šípků, pak vrstvu švestek, a když jest vše urovnáno, udělej pěkný okolek z pomeranče na koláčky rozkrájeného, vše dobře posyp tlučeným cukrem a dej to na stůl. Nemáš-li šípky, tedy je vynech.</p>
 
-<a name="smazeny-kompot"><h2>Smažený kompot</h2></a>
+<a id="smazeny-kompot"><h2>Smažený kompot</h2></a>
 
 <p>Oloupaná míšeňská jablíčka rozkrájej na čtvrtky, uvař suché švestky a vyndej z nich pecky; ze dvou vajec, trochu cukru, z několika vařeček pěkné mouky a několika lžiček buď vína nebo piva udělej řiďounké těsto jako na kapání, načež v něm omáčej ty čtvrtky jablek i ty švestky a nech oboje v horkém másle pěkně do zlatova usmažit; pak urovnej na misku pěkně do vršku vždy jeden věneček z jablek a jeden ze švestek, posyp to cukrem a skořici a dej to na stůl.</p>
 
-<a name="kompot-z-mrkve"><h2>Kompot z mrkve</h2></a>
+<a id="kompot-z-mrkve"><h2>Kompot z mrkve</h2></a>
 
 <p>Oškrab čistě několik šťavnatých mrkví, rozkrájej je na tenounké nudličky, dej je na rendlík se čtvrt librou cukru, na němžto jsi byla ostrouhala kůru s jednoho pomeranče, přilej k tomu asi půl žejdlíka vody, naceď do toho šťávu z toho pomeranče, přikrej to a nech to do měkka dusit, musíš však bedlivě dohlížet, aby se to nepřipálilo; pak to nech vychladnout a dej to na stůl buď co samostatný kompot, anebo z toho udělej věnec buď okolo brusinek, neb okolo suchých vařených švestek aneb okolo jiného zavařeného ovoce.</p>
 
-<a name="kompot-z-mrkve-a-pomerancu"><h2>Kompot z mrkve a pomerančů</h2></a>
+<a id="kompot-z-mrkve-a-pomerancu"><h2>Kompot z mrkve a pomerančů</h2></a>
 
 <p>Oškrab dvě pěkné velké tmavočervené a dvě bledožluté mrkve, rozkrájej každou zvlášť na tenounké nudličky, přemej je, vlož každou na jiný rendlíček, k červené přidej na nudličky skrájenou kůru s jednoho pomeranče, čtyry loty cukru a půl žejdlíka červeného vína, ke žluté dej nakrájenou kůru s jednoho citronu, půl žejdlíka bílého vína, trochu vody, a nech obojí do měkka dusit; pak vytlač do každé šťávu z půl citronu, a není-li to dost sladké, přidej cukru. Nyní rozkrájej dva pomeranče na půlměsíčky, tu bledou mrkev urovnej do prostřed kompotní misky, kolem ní udělej věnec z té hnědé mrkve, oblož to těmi pomerančovými půlměsíčky, posyp to ještě cukrem a nech to vystydnout chceš-li, můžeš to ještě okrášlit nějakou zavařeninkou.</p>
 
-<a name="kompot-z-melounu"><h2>Kompot z melounu</h2></a>
+<a id="kompot-z-melounu"><h2>Kompot z melounu</h2></a>
 
 <p>Rozpůli meloun, vyndej z něho všechny jádra, rozkrájej ho na stejné kousky, oloupej je a vlož je na misku. Nech na rendlíčku zvařit čtvrt libry cukru s půl žejdlíkem vody a šťávou z jednoho citronu, a když se to začíná táhnout, polej tím ten rozkrájený meloun a nech ho tak asi hodinu stát; pak šťávu slej, nech ji opět zvařit, meloun urovnej na kompotní misku, k té zvařenině přidej lžičku rumu a meloun tím polej. Máš-li zavařený rybíz, můžeš to ním povrchu okrášlit.</p>
 
-<a name="kompot-ze-gdoulovych-jablek"><h2>Kompot ze gdoulových jablek</h2></a>
+<a id="kompot-ze-gdoulovych-jablek"><h2>Kompot ze gdoulových jablek</h2></a>
 
 <p>Oloupej 8 nebo 10 gdoulových jablek, rozkrájej je na čtvrtky, jaderníky vyřízni a jablka nech ve vodě uvařit na měkko sice, ne však aby se rozpadly; mezitím nech na rendlíčku čtvrt libry cukru s půl žejdlíkem vody, kouskem skořice a nakrájenou citronovou kůrou do husta zvařit, potom jablka opatrně vyndej, vlož je do té zvařeniny a nech je ještě chvilku povařit, pak je vyndej na kompotní misku a tou šťávou je polej.</p>
 
-<a name="kompot-kastanovy"><h2>Kompot kaštanový</h2></a>
+<a id="kompot-kastanovy"><h2>Kompot kaštanový</h2></a>
 
 <p>S libry kaštanů oloupej tu svrchní tvrdou slupku, pak na ně nalej vařící vodu a nech je v ní tak dlouho, až můžeš i tu druhou slupku sloupnout; to když se stalo, vlož kaštany do rendlíku, v němž jsi byla nechala zvařit čtvrt libry cukru s půl žejdlíkem vody, a nech je zvolna do měkka dusit; pak urovnej kaštany na misku, do cukru proced šťávu z jednoho pomeranče, nech přes to ještě var přejít a kaštany tím polej.</p>
 
-<a name="kompot-z-brusinek"><h2>Kompot z brusinek</h2></a>
+<a id="kompot-z-brusinek"><h2>Kompot z brusinek</h2></a>
 
 <p>Nech na rendlíčku zvařit půl žejdlíka červeného vína se Čtvrt librou cukru, přidej k tomu kousek skořice a trochu citronové kůry, a když to začíná houstnout, dej do toho asi žejdlík zavařených brusinek, nech je jenom zpejchnout a vyndej je na misku; pak rozkrájej jeden nebo dva pomeranče na půlměsíčky, oblož nimi brusinky, posyp to ještě cukrem a dej to na stůl.</p>
 
